samples/envoy-configdump-ambient-original.yaml
configs:
  - '@type': type.googleapis.com/envoy.admin.v3.BootstrapConfigDump
    bootstrap:
      admin:
        access_log:
          - name: envoy.access_loggers.file
            typed_config:
              '@type': type.googleapis.com/envoy.extensions.access_loggers.file.v3.FileAccessLog
              path: /dev/null
        address:
          socket_address:
            address: 127.0.0.1
            port_value: 15000
        profile_path: /var/lib/istio/data/envoy.prof
      bootstrap_extensions:
        - name: envoy.bootstrap.internal_listener
          typed_config:
            '@type': type.googleapis.com/envoy.extensions.bootstrap.internal_listener.v3.InternalListener
      dynamic_resources:
        ads_config:
          api_type: GRPC
          grpc_services:
            - envoy_grpc:
                cluster_name: xds-grpc
          set_node_on_first_message_only: true
          transport_api_version: V3
        cds_config:
          ads: {}
          initial_fetch_timeout: 0s
          resource_api_version: V3
        lds_config:
          ads: {}
          initial_fetch_timeout: 0s
          resource_api_version: V3
      layered_runtime:
        layers:
          - name: global config
            static_layer:
              envoy.deprecated_features:envoy.config.listener.v3.Listener.hidden_envoy_deprecated_use_original_dst: "true"
              envoy.reloadable_features.http_reject_path_with_fragment: "false"
              envoy.reloadable_features.internal_address: "true"
              envoy.reloadable_features.no_extension_lookup_by_name: "false"
              envoy.reloadable_features.require_strict_1xx_and_204_response_headers: "false"
              overload.global_downstream_max_connections: "2147483647"
              re2.max_program_size.error_level: "32768"
          - admin_layer: {}
            name: admin
      node:
        cluster: istio-proxy.istio-system
        extensions:
          - category: envoy.matching.input_matchers
            name: envoy.matching.matchers.consistent_hashing
            type_urls:
              - envoy.extensions.matching.input_matchers.consistent_hashing.v3.ConsistentHashing
          - category: envoy.matching.input_matchers
            name: envoy.matching.matchers.ip
            type_urls:
              - envoy.extensions.matching.input_matchers.ip.v3.Ip
          - category: envoy.dubbo_proxy.serializers
            name: dubbo.hessian2
          - category: envoy.filters.udp_listener
            name: envoy.filters.udp.dns_filter
            type_urls:
              - envoy.extensions.filters.udp.dns_filter.v3.DnsFilterConfig
          - category: envoy.filters.udp_listener
            name: envoy.filters.udp_listener.udp_proxy
            type_urls:
              - envoy.extensions.filters.udp.udp_proxy.v3.UdpProxyConfig
          - category: envoy.resource_monitors
            name: envoy.resource_monitors.fixed_heap
            type_urls:
              - envoy.extensions.resource_monitors.fixed_heap.v3.FixedHeapConfig
          - category: envoy.resource_monitors
            name: envoy.resource_monitors.injected_resource
            type_urls:
              - envoy.extensions.resource_monitors.injected_resource.v3.InjectedResourceConfig
          - category: envoy.thrift_proxy.protocols
            name: auto
          - category: envoy.thrift_proxy.protocols
            name: binary
          - category: envoy.thrift_proxy.protocols
            name: binary/non-strict
          - category: envoy.thrift_proxy.protocols
            name: compact
          - category: envoy.thrift_proxy.protocols
            name: twitter
          - category: envoy.stats_sinks
            name: envoy.dog_statsd
          - category: envoy.stats_sinks
            name: envoy.graphite_statsd
          - category: envoy.stats_sinks
            name: envoy.metrics_service
          - category: envoy.stats_sinks
            name: envoy.stat_sinks.dog_statsd
            type_urls:
              - envoy.config.metrics.v3.DogStatsdSink
          - category: envoy.stats_sinks
            name: envoy.stat_sinks.graphite_statsd
            type_urls:
              - envoy.extensions.stat_sinks.graphite_statsd.v3.GraphiteStatsdSink
          - category: envoy.stats_sinks
            name: envoy.stat_sinks.hystrix
            type_urls:
              - envoy.config.metrics.v3.HystrixSink
          - category: envoy.stats_sinks
            name: envoy.stat_sinks.metrics_service
            type_urls:
              - envoy.config.metrics.v3.MetricsServiceConfig
          - category: envoy.stats_sinks
            name: envoy.stat_sinks.statsd
            type_urls:
              - envoy.config.metrics.v3.StatsdSink
          - category: envoy.stats_sinks
            name: envoy.stat_sinks.wasm
            type_urls:
              - envoy.extensions.stat_sinks.wasm.v3.Wasm
          - category: envoy.stats_sinks
            name: envoy.statsd
          - category: envoy.upstreams
            name: envoy.filters.connection_pools.tcp.generic
            type_urls:
              - envoy.extensions.upstreams.tcp.generic.v3.GenericConnectionPoolProto
          - category: envoy.retry_host_predicates
            name: envoy.retry_host_predicates.omit_canary_hosts
            type_urls:
              - envoy.extensions.retry.host.omit_canary_hosts.v3.OmitCanaryHostsPredicate
          - category: envoy.retry_host_predicates
            name: envoy.retry_host_predicates.omit_host_metadata
            type_urls:
              - envoy.extensions.retry.host.omit_host_metadata.v3.OmitHostMetadataConfig
          - category: envoy.retry_host_predicates
            name: envoy.retry_host_predicates.previous_hosts
            type_urls:
              - envoy.extensions.retry.host.previous_hosts.v3.PreviousHostsPredicate
          - category: envoy.http.cache
            name: envoy.extensions.http.cache.simple
            type_urls:
              - envoy.extensions.cache.simple_http_cache.v3.SimpleHttpCacheConfig
          - category: envoy.retry_priorities
            name: envoy.retry_priorities.previous_priorities
            type_urls:
              - envoy.extensions.retry.priority.previous_priorities.v3.PreviousPrioritiesConfig
          - category: envoy.filters.upstream_network
            name: envoy.filters.network.upstream.metadata_exchange
            type_urls:
              - envoy.tcp.metadataexchange.config.MetadataExchange
          - category: envoy.filters.http
            name: envoy.bandwidth_limit
          - category: envoy.filters.http
            name: envoy.buffer
          - category: envoy.filters.http
            name: envoy.cors
          - category: envoy.filters.http
            name: envoy.csrf
          - category: envoy.filters.http
            name: envoy.ext_authz
          - category: envoy.filters.http
            name: envoy.ext_proc
          - category: envoy.filters.http
            name: envoy.fault
          - category: envoy.filters.http
            name: envoy.filters.http.adaptive_concurrency
            type_urls:
              - envoy.extensions.filters.http.adaptive_concurrency.v3.AdaptiveConcurrency
          - category: envoy.filters.http
            name: envoy.filters.http.admission_control
            type_urls:
              - envoy.extensions.filters.http.admission_control.v3.AdmissionControl
          - category: envoy.filters.http
            name: envoy.filters.http.alternate_protocols_cache
            type_urls:
              - envoy.extensions.filters.http.alternate_protocols_cache.v3.FilterConfig
          - category: envoy.filters.http
            name: envoy.filters.http.aws_lambda
            type_urls:
              - envoy.extensions.filters.http.aws_lambda.v3.Config
              - envoy.extensions.filters.http.aws_lambda.v3.PerRouteConfig
          - category: envoy.filters.http
            name: envoy.filters.http.aws_request_signing
            type_urls:
              - envoy.extensions.filters.http.aws_request_signing.v3.AwsRequestSigning
          - category: envoy.filters.http
            name: envoy.filters.http.bandwidth_limit
            type_urls:
              - envoy.extensions.filters.http.bandwidth_limit.v3.BandwidthLimit
          - category: envoy.filters.http
            name: envoy.filters.http.buffer
            type_urls:
              - envoy.extensions.filters.http.buffer.v3.Buffer
              - envoy.extensions.filters.http.buffer.v3.BufferPerRoute
          - category: envoy.filters.http
            name: envoy.filters.http.cache
            type_urls:
              - envoy.extensions.filters.http.cache.v3.CacheConfig
          - category: envoy.filters.http
            name: envoy.filters.http.cdn_loop
            type_urls:
              - envoy.extensions.filters.http.cdn_loop.v3.CdnLoopConfig
          - category: envoy.filters.http
            name: envoy.filters.http.composite
            type_urls:
              - envoy.extensions.filters.http.composite.v3.Composite
          - category: envoy.filters.http
            name: envoy.filters.http.compressor
            type_urls:
              - envoy.extensions.filters.http.compressor.v3.Compressor
          - category: envoy.filters.http
            name: envoy.filters.http.cors
            type_urls:
              - envoy.extensions.filters.http.cors.v3.Cors
          - category: envoy.filters.http
            name: envoy.filters.http.csrf
            type_urls:
              - envoy.extensions.filters.http.csrf.v3.CsrfPolicy
          - category: envoy.filters.http
            name: envoy.filters.http.decompressor
            type_urls:
              - envoy.extensions.filters.http.decompressor.v3.Decompressor
          - category: envoy.filters.http
            name: envoy.filters.http.dynamic_forward_proxy
            type_urls:
              - envoy.extensions.filters.http.dynamic_forward_proxy.v3.FilterConfig
              - envoy.extensions.filters.http.dynamic_forward_proxy.v3.PerRouteConfig
          - category: envoy.filters.http
            name: envoy.filters.http.ext_authz
            type_urls:
              - envoy.extensions.filters.http.ext_authz.v3.ExtAuthz
              - envoy.extensions.filters.http.ext_authz.v3.ExtAuthzPerRoute
          - category: envoy.filters.http
            name: envoy.filters.http.ext_proc
            type_urls:
              - envoy.extensions.filters.http.ext_proc.v3.ExtProcPerRoute
              - envoy.extensions.filters.http.ext_proc.v3.ExternalProcessor
          - category: envoy.filters.http
            name: envoy.filters.http.fault
            type_urls:
              - envoy.extensions.filters.http.fault.v3.HTTPFault
          - category: envoy.filters.http
            name: envoy.filters.http.grpc_http1_bridge
            type_urls:
              - envoy.extensions.filters.http.grpc_http1_bridge.v3.Config
          - category: envoy.filters.http
            name: envoy.filters.http.grpc_http1_reverse_bridge
            type_urls:
              - envoy.extensions.filters.http.grpc_http1_reverse_bridge.v3.FilterConfig
              - envoy.extensions.filters.http.grpc_http1_reverse_bridge.v3.FilterConfigPerRoute
          - category: envoy.filters.http
            name: envoy.filters.http.grpc_json_transcoder
            type_urls:
              - envoy.extensions.filters.http.grpc_json_transcoder.v3.GrpcJsonTranscoder
          - category: envoy.filters.http
            name: envoy.filters.http.grpc_stats
            type_urls:
              - envoy.extensions.filters.http.grpc_stats.v3.FilterConfig
          - category: envoy.filters.http
            name: envoy.filters.http.grpc_web
            type_urls:
              - envoy.extensions.filters.http.grpc_web.v3.GrpcWeb
          - category: envoy.filters.http
            name: envoy.filters.http.header_to_metadata
            type_urls:
              - envoy.extensions.filters.http.header_to_metadata.v3.Config
          - category: envoy.filters.http
            name: envoy.filters.http.health_check
            type_urls:
              - envoy.extensions.filters.http.health_check.v3.HealthCheck
          - category: envoy.filters.http
            name: envoy.filters.http.ip_tagging
            type_urls:
              - envoy.extensions.filters.http.ip_tagging.v3.IPTagging
          - category: envoy.filters.http
            name: envoy.filters.http.jwt_authn
            type_urls:
              - envoy.extensions.filters.http.jwt_authn.v3.JwtAuthentication
              - envoy.extensions.filters.http.jwt_authn.v3.PerRouteConfig
          - category: envoy.filters.http
            name: envoy.filters.http.local_ratelimit
            type_urls:
              - envoy.extensions.filters.http.local_ratelimit.v3.LocalRateLimit
          - category: envoy.filters.http
            name: envoy.filters.http.lua
            type_urls:
              - envoy.extensions.filters.http.lua.v3.Lua
              - envoy.extensions.filters.http.lua.v3.LuaPerRoute
          - category: envoy.filters.http
            name: envoy.filters.http.match_delegate
            type_urls:
              - envoy.extensions.common.matching.v3.ExtensionWithMatcher
          - category: envoy.filters.http
            name: envoy.filters.http.oauth2
            type_urls:
              - envoy.extensions.filters.http.oauth2.v3.OAuth2
          - category: envoy.filters.http
            name: envoy.filters.http.on_demand
            type_urls:
              - envoy.extensions.filters.http.on_demand.v3.OnDemand
              - envoy.extensions.filters.http.on_demand.v3.PerRouteConfig
          - category: envoy.filters.http
            name: envoy.filters.http.original_src
            type_urls:
              - envoy.extensions.filters.http.original_src.v3.OriginalSrc
          - category: envoy.filters.http
            name: envoy.filters.http.ratelimit
            type_urls:
              - envoy.extensions.filters.http.ratelimit.v3.RateLimit
              - envoy.extensions.filters.http.ratelimit.v3.RateLimitPerRoute
          - category: envoy.filters.http
            name: envoy.filters.http.rbac
            type_urls:
              - envoy.extensions.filters.http.rbac.v3.RBAC
              - envoy.extensions.filters.http.rbac.v3.RBACPerRoute
          - category: envoy.filters.http
            name: envoy.filters.http.router
            type_urls:
              - envoy.extensions.filters.http.router.v3.Router
          - category: envoy.filters.http
            name: envoy.filters.http.set_metadata
            type_urls:
              - envoy.extensions.filters.http.set_metadata.v3.Config
          - category: envoy.filters.http
            name: envoy.filters.http.stateful_session
            type_urls:
              - envoy.extensions.filters.http.stateful_session.v3.StatefulSession
              - envoy.extensions.filters.http.stateful_session.v3.StatefulSessionPerRoute
          - category: envoy.filters.http
            name: envoy.filters.http.tap
            type_urls:
              - envoy.extensions.filters.http.tap.v3.Tap
          - category: envoy.filters.http
            name: envoy.filters.http.wasm
            type_urls:
              - envoy.extensions.filters.http.wasm.v3.Wasm
          - category: envoy.filters.http
            name: envoy.grpc_http1_bridge
          - category: envoy.filters.http
            name: envoy.grpc_json_transcoder
          - category: envoy.filters.http
            name: envoy.grpc_web
          - category: envoy.filters.http
            name: envoy.health_check
          - category: envoy.filters.http
            name: envoy.ip_tagging
          - category: envoy.filters.http
            name: envoy.local_rate_limit
          - category: envoy.filters.http
            name: envoy.lua
          - category: envoy.filters.http
            name: envoy.rate_limit
          - category: envoy.filters.http
            name: envoy.router
          - category: envoy.filters.http
            name: istio.alpn
            type_urls:
              - istio.envoy.config.filter.http.alpn.v2alpha1.FilterConfig
          - category: envoy.filters.http
            name: istio.filters.http.baggage_handler
            type_urls:
              - istio.telemetry.baggagehandler.v1.Config
          - category: envoy.filters.http
            name: istio_authn
            type_urls:
              - istio.envoy.config.filter.http.authn.v2alpha1.FilterConfig
          - category: envoy.guarddog_actions
            name: envoy.watchdog.abort_action
            type_urls:
              - envoy.watchdog.v3.AbortActionConfig
          - category: envoy.guarddog_actions
            name: envoy.watchdog.profile_action
            type_urls:
              - envoy.extensions.watchdog.profile_action.v3.ProfileActionConfig
          - category: envoy.rbac.matchers
            name: envoy.rbac.matchers.upstream_ip_port
            type_urls:
              - envoy.extensions.rbac.matchers.upstream_ip_port.v3.UpstreamIpPortMatcher
          - category: envoy.internal_redirect_predicates
            name: envoy.internal_redirect_predicates.allow_listed_routes
            type_urls:
              - envoy.extensions.internal_redirect.allow_listed_routes.v3.AllowListedRoutesConfig
          - category: envoy.internal_redirect_predicates
            name: envoy.internal_redirect_predicates.previous_routes
            type_urls:
              - envoy.extensions.internal_redirect.previous_routes.v3.PreviousRoutesConfig
          - category: envoy.internal_redirect_predicates
            name: envoy.internal_redirect_predicates.safe_cross_scheme
            type_urls:
              - envoy.extensions.internal_redirect.safe_cross_scheme.v3.SafeCrossSchemeConfig
          - category: envoy.filters.network
            name: envoy.echo
          - category: envoy.filters.network
            name: envoy.ext_authz
          - category: envoy.filters.network
            name: envoy.filters.network.connection_limit
            type_urls:
              - envoy.extensions.filters.network.connection_limit.v3.ConnectionLimit
          - category: envoy.filters.network
            name: envoy.filters.network.direct_response
            type_urls:
              - envoy.extensions.filters.network.direct_response.v3.Config
          - category: envoy.filters.network
            name: envoy.filters.network.dubbo_proxy
            type_urls:
              - envoy.extensions.filters.network.dubbo_proxy.v3.DubboProxy
          - category: envoy.filters.network
            name: envoy.filters.network.echo
            type_urls:
              - envoy.extensions.filters.network.echo.v3.Echo
          - category: envoy.filters.network
            name: envoy.filters.network.ext_authz
            type_urls:
              - envoy.extensions.filters.network.ext_authz.v3.ExtAuthz
          - category: envoy.filters.network
            name: envoy.filters.network.http_connection_manager
            type_urls:
              - envoy.extensions.filters.network.http_connection_manager.v3.HttpConnectionManager
          - category: envoy.filters.network
            name: envoy.filters.network.local_ratelimit
            type_urls:
              - envoy.extensions.filters.network.local_ratelimit.v3.LocalRateLimit
          - category: envoy.filters.network
            name: envoy.filters.network.metadata_exchange
            type_urls:
              - envoy.tcp.metadataexchange.config.MetadataExchange
          - category: envoy.filters.network
            name: envoy.filters.network.mongo_proxy
            type_urls:
              - envoy.extensions.filters.network.mongo_proxy.v3.MongoProxy
          - category: envoy.filters.network
            name: envoy.filters.network.mysql_proxy
            type_urls:
              - envoy.extensions.filters.network.mysql_proxy.v3.MySQLProxy
          - category: envoy.filters.network
            name: envoy.filters.network.ratelimit
            type_urls:
              - envoy.extensions.filters.network.ratelimit.v3.RateLimit
          - category: envoy.filters.network
            name: envoy.filters.network.rbac
            type_urls:
              - envoy.extensions.filters.network.rbac.v3.RBAC
          - category: envoy.filters.network
            name: envoy.filters.network.redis_proxy
            type_urls:
              - envoy.extensions.filters.network.redis_proxy.v3.RedisProxy
          - category: envoy.filters.network
            name: envoy.filters.network.sip_proxy
            type_urls:
              - envoy.extensions.filters.network.sip_proxy.v3alpha.SipProxy
          - category: envoy.filters.network
            name: envoy.filters.network.sni_cluster
            type_urls:
              - envoy.extensions.filters.network.sni_cluster.v3.SniCluster
          - category: envoy.filters.network
            name: envoy.filters.network.sni_dynamic_forward_proxy
            type_urls:
              - envoy.extensions.filters.network.sni_dynamic_forward_proxy.v3.FilterConfig
          - category: envoy.filters.network
            name: envoy.filters.network.tcp_cluster_rewrite
            type_urls:
              - istio.envoy.config.filter.network.tcp_cluster_rewrite.v2alpha1.TcpClusterRewrite
          - category: envoy.filters.network
            name: envoy.filters.network.tcp_proxy
            type_urls:
              - envoy.extensions.filters.network.tcp_proxy.v3.TcpProxy
          - category: envoy.filters.network
            name: envoy.filters.network.thrift_proxy
            type_urls:
              - envoy.extensions.filters.network.thrift_proxy.v3.ThriftProxy
          - category: envoy.filters.network
            name: envoy.filters.network.wasm
            type_urls:
              - envoy.extensions.filters.network.wasm.v3.Wasm
          - category: envoy.filters.network
            name: envoy.filters.network.zookeeper_proxy
            type_urls:
              - envoy.extensions.filters.network.zookeeper_proxy.v3.ZooKeeperProxy
          - category: envoy.filters.network
            name: envoy.http_connection_manager
          - category: envoy.filters.network
            name: envoy.mongo_proxy
          - category: envoy.filters.network
            name: envoy.ratelimit
          - category: envoy.filters.network
            name: envoy.redis_proxy
          - category: envoy.filters.network
            name: envoy.tcp_proxy
          - category: envoy.filters.network
            name: forward_downstream_sni
            type_urls:
              - io.istio.tcp.forward_downstream_sni.v1.Config
          - category: envoy.filters.network
            name: sni_verifier
            type_urls:
              - io.istio.tcp.sni_verifier.v1.Config
          - category: envoy.dubbo_proxy.protocols
            name: dubbo
          - category: envoy.matching.http.input
            name: envoy.matching.inputs.destination_ip
            type_urls:
              - envoy.extensions.matching.common_inputs.network.v3.DestinationIPInput
          - category: envoy.matching.http.input
            name: envoy.matching.inputs.destination_port
            type_urls:
              - envoy.extensions.matching.common_inputs.network.v3.DestinationPortInput
          - category: envoy.matching.http.input
            name: envoy.matching.inputs.direct_source_ip
            type_urls:
              - envoy.extensions.matching.common_inputs.network.v3.DirectSourceIPInput
          - category: envoy.matching.http.input
            name: envoy.matching.inputs.dns_san
            type_urls:
              - envoy.extensions.matching.common_inputs.ssl.v3.DnsSanInput
          - category: envoy.matching.http.input
            name: envoy.matching.inputs.request_headers
            type_urls:
              - envoy.type.matcher.v3.HttpRequestHeaderMatchInput
          - category: envoy.matching.http.input
            name: envoy.matching.inputs.request_trailers
            type_urls:
              - envoy.type.matcher.v3.HttpRequestTrailerMatchInput
          - category: envoy.matching.http.input
            name: envoy.matching.inputs.response_headers
            type_urls:
              - envoy.type.matcher.v3.HttpResponseHeaderMatchInput
          - category: envoy.matching.http.input
            name: envoy.matching.inputs.response_trailers
            type_urls:
              - envoy.type.matcher.v3.HttpResponseTrailerMatchInput
          - category: envoy.matching.http.input
            name: envoy.matching.inputs.server_name
            type_urls:
              - envoy.extensions.matching.common_inputs.network.v3.ServerNameInput
          - category: envoy.matching.http.input
            name: envoy.matching.inputs.source_ip
            type_urls:
              - envoy.extensions.matching.common_inputs.network.v3.SourceIPInput
          - category: envoy.matching.http.input
            name: envoy.matching.inputs.source_port
            type_urls:
              - envoy.extensions.matching.common_inputs.network.v3.SourcePortInput
          - category: envoy.matching.http.input
            name: envoy.matching.inputs.source_type
            type_urls:
              - envoy.extensions.matching.common_inputs.network.v3.SourceTypeInput
          - category: envoy.matching.http.input
            name: envoy.matching.inputs.subject
            type_urls:
              - envoy.extensions.matching.common_inputs.ssl.v3.SubjectInput
          - category: envoy.matching.http.input
            name: envoy.matching.inputs.uri_san
            type_urls:
              - envoy.extensions.matching.common_inputs.ssl.v3.UriSanInput
          - category: envoy.rate_limit_descriptors
            name: envoy.rate_limit_descriptors.expr
            type_urls:
              - envoy.extensions.rate_limit_descriptors.expr.v3.Descriptor
          - category: envoy.tls.key_providers
            name: cryptomb
          - category: envoy.resolvers
            name: envoy.ip
          - category: envoy.regex_engines
            name: envoy.regex_engines.google_re2
            type_urls:
              - envoy.extensions.regex_engines.v3.GoogleRE2
          - category: envoy.clusters
            name: envoy.cluster.eds
          - category: envoy.clusters
            name: envoy.cluster.logical_dns
          - category: envoy.clusters
            name: envoy.cluster.original_dst
          - category: envoy.clusters
            name: envoy.cluster.static
          - category: envoy.clusters
            name: envoy.cluster.strict_dns
          - category: envoy.clusters
            name: envoy.clusters.aggregate
          - category: envoy.clusters
            name: envoy.clusters.dynamic_forward_proxy
          - category: envoy.clusters
            name: envoy.clusters.redis
          - category: envoy.thrift_proxy.filters
            name: envoy.filters.thrift.header_to_metadata
            type_urls:
              - envoy.extensions.filters.network.thrift_proxy.filters.header_to_metadata.v3.HeaderToMetadata
          - category: envoy.thrift_proxy.filters
            name: envoy.filters.thrift.rate_limit
            type_urls:
              - envoy.extensions.filters.network.thrift_proxy.filters.ratelimit.v3.RateLimit
          - category: envoy.thrift_proxy.filters
            name: envoy.filters.thrift.router
            type_urls:
              - envoy.extensions.filters.network.thrift_proxy.router.v3.Router
          - category: envoy.thrift_proxy.transports
            name: auto
          - category: envoy.thrift_proxy.transports
            name: framed
          - category: envoy.thrift_proxy.transports
            name: header
          - category: envoy.thrift_proxy.transports
            name: unframed
          - category: envoy.wasm.runtime
            name: envoy.wasm.runtime.null
          - category: envoy.wasm.runtime
            name: envoy.wasm.runtime.v8
          - category: envoy.formatter
            name: envoy.formatter.metadata
            type_urls:
              - envoy.extensions.formatter.metadata.v3.Metadata
          - category: envoy.formatter
            name: envoy.formatter.req_without_query
            type_urls:
              - envoy.extensions.formatter.req_without_query.v3.ReqWithoutQuery
          - category: envoy.upstream_options
            name: envoy.extensions.upstreams.http.v3.HttpProtocolOptions
            type_urls:
              - envoy.extensions.upstreams.http.v3.HttpProtocolOptions
          - category: envoy.upstream_options
            name: envoy.upstreams.http.http_protocol_options
          - category: network.connection.client
            name: default
          - category: network.connection.client
            name: envoy_internal
          - category: envoy.tls.cert_validator
            name: envoy.tls.cert_validator.default
          - category: envoy.tls.cert_validator
            name: envoy.tls.cert_validator.spiffe
          - category: envoy.route.early_data_policy
            name: envoy.route.early_data_policy.default
            type_urls:
              - envoy.extensions.early_data.v3.DefaultEarlyDataPolicy
          - category: envoy.compression.compressor
            name: envoy.compression.brotli.compressor
            type_urls:
              - envoy.extensions.compression.brotli.compressor.v3.Brotli
          - category: envoy.compression.compressor
            name: envoy.compression.gzip.compressor
            type_urls:
              - envoy.extensions.compression.gzip.compressor.v3.Gzip
          - category: envoy.http.stateful_session
            name: envoy.http.stateful_session.cookie
            type_urls:
              - envoy.extensions.http.stateful_session.cookie.v3.CookieBasedSessionState
          - category: envoy.quic.proof_source
            name: envoy.quic.proof_source.filter_chain
            type_urls:
              - envoy.extensions.quic.proof_source.v3.ProofSourceConfig
          - category: envoy.access_loggers
            name: envoy.access_loggers.file
            type_urls:
              - envoy.extensions.access_loggers.file.v3.FileAccessLog
          - category: envoy.access_loggers
            name: envoy.access_loggers.http_grpc
            type_urls:
              - envoy.extensions.access_loggers.grpc.v3.HttpGrpcAccessLogConfig
          - category: envoy.access_loggers
            name: envoy.access_loggers.open_telemetry
            type_urls:
              - envoy.extensions.access_loggers.open_telemetry.v3.OpenTelemetryAccessLogConfig
          - category: envoy.access_loggers
            name: envoy.access_loggers.stderr
            type_urls:
              - envoy.extensions.access_loggers.stream.v3.StderrAccessLog
          - category: envoy.access_loggers
            name: envoy.access_loggers.stdout
            type_urls:
              - envoy.extensions.access_loggers.stream.v3.StdoutAccessLog
          - category: envoy.access_loggers
            name: envoy.access_loggers.tcp_grpc
            type_urls:
              - envoy.extensions.access_loggers.grpc.v3.TcpGrpcAccessLogConfig
          - category: envoy.access_loggers
            name: envoy.access_loggers.wasm
            type_urls:
              - envoy.extensions.access_loggers.wasm.v3.WasmAccessLog
          - category: envoy.access_loggers
            name: envoy.file_access_log
          - category: envoy.access_loggers
            name: envoy.http_grpc_access_log
          - category: envoy.access_loggers
            name: envoy.open_telemetry_access_log
          - category: envoy.access_loggers
            name: envoy.stderr_access_log
          - category: envoy.access_loggers
            name: envoy.stdout_access_log
          - category: envoy.access_loggers
            name: envoy.tcp_grpc_access_log
          - category: envoy.access_loggers
            name: envoy.wasm_access_log
          - category: envoy.http.original_ip_detection
            name: envoy.http.original_ip_detection.custom_header
            type_urls:
              - envoy.extensions.http.original_ip_detection.custom_header.v3.CustomHeaderConfig
          - category: envoy.http.original_ip_detection
            name: envoy.http.original_ip_detection.xff
            type_urls:
              - envoy.extensions.http.original_ip_detection.xff.v3.XffConfig
          - category: envoy.dubbo_proxy.filters
            name: envoy.filters.dubbo.router
            type_urls:
              - envoy.extensions.filters.network.dubbo_proxy.router.v3.Router
          - category: envoy.bootstrap
            name: envoy.bootstrap.internal_listener
            type_urls:
              - envoy.extensions.bootstrap.internal_listener.v3.InternalListener
          - category: envoy.bootstrap
            name: envoy.bootstrap.wasm
            type_urls:
              - envoy.extensions.wasm.v3.WasmService
          - category: envoy.bootstrap
            name: envoy.extensions.network.socket_interface.default_socket_interface
            type_urls:
              - envoy.extensions.network.socket_interface.v3.DefaultSocketInterface
          - category: envoy.matching.common_inputs
            name: envoy.matching.common_inputs.environment_variable
            type_urls:
              - envoy.extensions.matching.common_inputs.environment_variable.v3.Config
          - category: envoy.sip_proxy.filters
            name: envoy.filters.sip.router
            type_urls:
              - envoy.extensions.filters.network.sip_proxy.router.v3alpha.Router
          - category: envoy.transport_sockets.upstream
            name: envoy.transport_sockets.alts
            type_urls:
              - envoy.extensions.transport_sockets.alts.v3.Alts
          - category: envoy.transport_sockets.upstream
            name: envoy.transport_sockets.internal_upstream
            type_urls:
              - envoy.extensions.transport_sockets.internal_upstream.v3.InternalUpstreamTransport
          - category: envoy.transport_sockets.upstream
            name: envoy.transport_sockets.quic
            type_urls:
              - envoy.extensions.transport_sockets.quic.v3.QuicUpstreamTransport
          - category: envoy.transport_sockets.upstream
            name: envoy.transport_sockets.raw_buffer
            type_urls:
              - envoy.extensions.transport_sockets.raw_buffer.v3.RawBuffer
          - category: envoy.transport_sockets.upstream
            name: envoy.transport_sockets.starttls
            type_urls:
              - envoy.extensions.transport_sockets.starttls.v3.UpstreamStartTlsConfig
          - category: envoy.transport_sockets.upstream
            name: envoy.transport_sockets.tap
            type_urls:
              - envoy.extensions.transport_sockets.tap.v3.Tap
          - category: envoy.transport_sockets.upstream
            name: envoy.transport_sockets.tls
            type_urls:
              - envoy.extensions.transport_sockets.tls.v3.UpstreamTlsContext
          - category: envoy.transport_sockets.upstream
            name: envoy.transport_sockets.upstream_proxy_protocol
            type_urls:
              - envoy.extensions.transport_sockets.proxy_protocol.v3.ProxyProtocolUpstreamTransport
          - category: envoy.transport_sockets.upstream
            name: raw_buffer
          - category: envoy.transport_sockets.upstream
            name: starttls
          - category: envoy.transport_sockets.upstream
            name: tls
          - category: envoy.filters.listener
            name: envoy.filters.listener.http_inspector
            type_urls:
              - envoy.extensions.filters.listener.http_inspector.v3.HttpInspector
          - category: envoy.filters.listener
            name: envoy.filters.listener.metadata_to_peer_node
            type_urls:
              - istio.telemetry.metadatatopeernode.v1.Config
          - category: envoy.filters.listener
            name: envoy.filters.listener.original_dst
            type_urls:
              - envoy.extensions.filters.listener.original_dst.v3.OriginalDst
          - category: envoy.filters.listener
            name: envoy.filters.listener.original_src
            type_urls:
              - envoy.extensions.filters.listener.original_src.v3.OriginalSrc
          - category: envoy.filters.listener
            name: envoy.filters.listener.proxy_protocol
            type_urls:
              - envoy.extensions.filters.listener.proxy_protocol.v3.ProxyProtocol
          - category: envoy.filters.listener
            name: envoy.filters.listener.tls_inspector
            type_urls:
              - envoy.extensions.filters.listener.tls_inspector.v3.TlsInspector
          - category: envoy.filters.listener
            name: envoy.filters.listener.workload_metadata
            type_urls:
              - istio.telemetry.workloadmetadata.v1.WorkloadMetadataResources
          - category: envoy.filters.listener
            name: envoy.listener.http_inspector
          - category: envoy.filters.listener
            name: envoy.listener.original_dst
          - category: envoy.filters.listener
            name: envoy.listener.original_src
          - category: envoy.filters.listener
            name: envoy.listener.proxy_protocol
          - category: envoy.filters.listener
            name: envoy.listener.tls_inspector
          - category: envoy.network.dns_resolver
            name: envoy.network.dns_resolver.cares
            type_urls:
              - envoy.extensions.network.dns_resolver.cares.v3.CaresDnsResolverConfig
          - category: envoy.access_loggers.extension_filters
            name: envoy.access_loggers.extension_filters.cel
            type_urls:
              - envoy.extensions.access_loggers.filters.cel.v3.ExpressionFilter
          - category: envoy.matching.action
            name: composite-action
            type_urls:
              - envoy.extensions.filters.http.composite.v3.ExecuteFilterAction
          - category: envoy.matching.action
            name: skip
            type_urls:
              - envoy.extensions.filters.common.matcher.action.v3.SkipFilter
          - category: envoy.transport_sockets.downstream
            name: envoy.transport_sockets.alts
            type_urls:
              - envoy.extensions.transport_sockets.alts.v3.Alts
          - category: envoy.transport_sockets.downstream
            name: envoy.transport_sockets.quic
            type_urls:
              - envoy.extensions.transport_sockets.quic.v3.QuicDownstreamTransport
          - category: envoy.transport_sockets.downstream
            name: envoy.transport_sockets.raw_buffer
            type_urls:
              - envoy.extensions.transport_sockets.raw_buffer.v3.RawBuffer
          - category: envoy.transport_sockets.downstream
            name: envoy.transport_sockets.starttls
            type_urls:
              - envoy.extensions.transport_sockets.starttls.v3.StartTlsConfig
          - category: envoy.transport_sockets.downstream
            name: envoy.transport_sockets.tap
            type_urls:
              - envoy.extensions.transport_sockets.tap.v3.Tap
          - category: envoy.transport_sockets.downstream
            name: envoy.transport_sockets.tls
            type_urls:
              - envoy.extensions.transport_sockets.tls.v3.DownstreamTlsContext
          - category: envoy.transport_sockets.downstream
            name: raw_buffer
          - category: envoy.transport_sockets.downstream
            name: starttls
          - category: envoy.transport_sockets.downstream
            name: tls
          - category: envoy.health_checkers
            name: envoy.health_checkers.redis
            type_urls:
              - envoy.extensions.health_checkers.redis.v3.Redis
          - category: envoy.http.stateful_header_formatters
            name: envoy.http.stateful_header_formatters.preserve_case
            type_urls:
              - envoy.extensions.http.header_formatters.preserve_case.v3.PreserveCaseFormatterConfig
          - category: envoy.http.stateful_header_formatters
            name: preserve_case
          - category: envoy.request_id
            name: envoy.request_id.uuid
            type_urls:
              - envoy.extensions.request_id.uuid.v3.UuidRequestIdConfig
          - category: envoy.matching.network.input
            name: envoy.matching.inputs.application_protocol
            type_urls:
              - envoy.extensions.matching.common_inputs.network.v3.ApplicationProtocolInput
          - category: envoy.matching.network.input
            name: envoy.matching.inputs.destination_ip
            type_urls:
              - envoy.extensions.matching.common_inputs.network.v3.DestinationIPInput
          - category: envoy.matching.network.input
            name: envoy.matching.inputs.destination_port
            type_urls:
              - envoy.extensions.matching.common_inputs.network.v3.DestinationPortInput
          - category: envoy.matching.network.input
            name: envoy.matching.inputs.direct_source_ip
            type_urls:
              - envoy.extensions.matching.common_inputs.network.v3.DirectSourceIPInput
          - category: envoy.matching.network.input
            name: envoy.matching.inputs.dns_san
            type_urls:
              - envoy.extensions.matching.common_inputs.ssl.v3.DnsSanInput
          - category: envoy.matching.network.input
            name: envoy.matching.inputs.server_name
            type_urls:
              - envoy.extensions.matching.common_inputs.network.v3.ServerNameInput
          - category: envoy.matching.network.input
            name: envoy.matching.inputs.source_ip
            type_urls:
              - envoy.extensions.matching.common_inputs.network.v3.SourceIPInput
          - category: envoy.matching.network.input
            name: envoy.matching.inputs.source_port
            type_urls:
              - envoy.extensions.matching.common_inputs.network.v3.SourcePortInput
          - category: envoy.matching.network.input
            name: envoy.matching.inputs.source_type
            type_urls:
              - envoy.extensions.matching.common_inputs.network.v3.SourceTypeInput
          - category: envoy.matching.network.input
            name: envoy.matching.inputs.subject
            type_urls:
              - envoy.extensions.matching.common_inputs.ssl.v3.SubjectInput
          - category: envoy.matching.network.input
            name: envoy.matching.inputs.transport_protocol
            type_urls:
              - envoy.extensions.matching.common_inputs.network.v3.TransportProtocolInput
          - category: envoy.matching.network.input
            name: envoy.matching.inputs.uri_san
            type_urls:
              - envoy.extensions.matching.common_inputs.ssl.v3.UriSanInput
          - category: envoy.udp_packet_writer
            name: envoy.udp_packet_writer.default
            type_urls:
              - envoy.extensions.udp_packet_writer.v3.UdpDefaultWriterFactory
          - category: envoy.udp_packet_writer
            name: envoy.udp_packet_writer.gso
            type_urls:
              - envoy.extensions.udp_packet_writer.v3.UdpGsoBatchWriterFactory
          - category: envoy.compression.decompressor
            name: envoy.compression.brotli.decompressor
            type_urls:
              - envoy.extensions.compression.brotli.decompressor.v3.Brotli
          - category: envoy.compression.decompressor
            name: envoy.compression.gzip.decompressor
            type_urls:
              - envoy.extensions.compression.gzip.decompressor.v3.Gzip
          - category: envoy.common.key_value
            name: envoy.key_value.file_based
            type_urls:
              - envoy.extensions.key_value.file_based.v3.FileBasedKeyValueStoreConfig
          - category: envoy.quic.server.crypto_stream
            name: envoy.quic.crypto_stream.server.quiche
            type_urls:
              - envoy.extensions.quic.crypto_stream.v3.CryptoServerStreamConfig
          - category: envoy.tracers
            name: envoy.dynamic.ot
          - category: envoy.tracers
            name: envoy.lightstep
          - category: envoy.tracers
            name: envoy.tracers.datadog
            type_urls:
              - envoy.config.trace.v3.DatadogConfig
          - category: envoy.tracers
            name: envoy.tracers.dynamic_ot
            type_urls:
              - envoy.config.trace.v3.DynamicOtConfig
          - category: envoy.tracers
            name: envoy.tracers.lightstep
            type_urls:
              - envoy.config.trace.v3.LightstepConfig
          - category: envoy.tracers
            name: envoy.tracers.opencensus
            type_urls:
              - envoy.config.trace.v3.OpenCensusConfig
          - category: envoy.tracers
            name: envoy.tracers.skywalking
            type_urls:
              - envoy.config.trace.v3.SkyWalkingConfig
          - category: envoy.tracers
            name: envoy.tracers.xray
            type_urls:
              - envoy.config.trace.v3.XRayConfig
          - category: envoy.tracers
            name: envoy.tracers.zipkin
            type_urls:
              - envoy.config.trace.v3.ZipkinConfig
          - category: envoy.tracers
            name: envoy.zipkin
          - category: envoy.grpc_credentials
            name: envoy.grpc_credentials.aws_iam
          - category: envoy.grpc_credentials
            name: envoy.grpc_credentials.default
          - category: envoy.grpc_credentials
            name: envoy.grpc_credentials.file_based_metadata
        id: sidecar~10.48.2.4~uproxy-8t6vd.istio-system~istio-system.svc.cluster.local
        locality:
          region: us-west1
          zone: us-west1-a
        metadata:
          CLUSTER_ID: Kubernetes
          ENVOY_PROMETHEUS_PORT: 15090
          ENVOY_STATUS_PORT: 15021
          GENERATOR: uproxy-envoy
          INSTANCE_IPS: 10.48.2.4,192.168.126.2,192.168.127.2
          ISTIO_PROXY_SHA: 51d63f92f66b6ad857537bba47bd70c4c2931b82
          ISTIO_VERSION: 1.15-dev
          NAME: uproxy-8t6vd
          NAMESPACE: istio-system
          NODE_NAME: gke-legacy-cni-default-pool-1fe7b790-r0tc
          PILOT_SAN:
            - istiod.istio-system.svc
          PLATFORM_METADATA:
            gcp_gce_instance: gke-legacy-cni-default-pool-1fe7b790-r0tc
            gcp_gce_instance_created_by: projects/700341650140/zones/us-west1-a/instanceGroupManagers/gke-legacy-cni-default-pool-1fe7b790-grp
            gcp_gce_instance_id: "7895406394479699751"
            gcp_gce_instance_template: projects/700341650140/global/instanceTemplates/gke-legacy-cni-default-pool-1fe7b790
            gcp_gke_cluster_name: legacy-cni
            gcp_gke_cluster_url: https://container.googleapis.com/v1/projects/howardjohn-istio/locations/us-west1-a/clusters/legacy-cni
            gcp_location: us-west1-a
            gcp_project: howardjohn-istio
            gcp_project_number: "700341650140"
          PROV_CERT: var/run/secrets/istio/root-cert.pem
          PROXY_CONFIG:
            binaryPath: /usr/local/bin/envoy
            concurrency: 2
            configPath: ./etc/istio/proxy
            controlPlaneAuthPolicy: MUTUAL_TLS
            discoveryAddress: istiod.istio-system.svc:15012
            drainDuration: 45s
            parentShutdownDuration: 60s
            proxyAdminPort: 15000
            serviceCluster: istio-proxy
            statNameLength: 189
            statusPort: 15020
            terminationDrainDuration: 5s
            tracing:
              zipkin:
                address: zipkin.istio-system:9411
          SERVICE_ACCOUNT: uproxy
          SIDECARLESS_TYPE: uproxy
        user_agent_build_version:
          metadata:
            build.label: dev
            build.type: RELEASE
            revision.sha: 51d63f92f66b6ad857537bba47bd70c4c2931b82
            revision.status: Clean
            ssl.version: BoringSSL
          version:
            major_number: 1
            minor_number: 23
        user_agent_name: envoy
      static_resources:
        clusters:
          - connect_timeout: 0.250s
            load_assignment:
              cluster_name: prometheus_stats
              endpoints:
                - lb_endpoints:
                    - endpoint:
                        address:
                          socket_address:
                            address: 127.0.0.1
                            port_value: 15000
            name: prometheus_stats
            type: STATIC
          - connect_timeout: 0.250s
            load_assignment:
              cluster_name: agent
              endpoints:
                - lb_endpoints:
                    - endpoint:
                        address:
                          socket_address:
                            address: 127.0.0.1
                            port_value: 15020
            name: agent
            type: STATIC
          - connect_timeout: 1s
            load_assignment:
              cluster_name: sds-grpc
              endpoints:
                - lb_endpoints:
                    - endpoint:
                        address:
                          pipe:
                            path: ./var/run/secrets/workload-spiffe-uds/socket
            name: sds-grpc
            type: STATIC
            typed_extension_protocol_options:
              envoy.extensions.upstreams.http.v3.HttpProtocolOptions:
                '@type': type.googleapis.com/envoy.extensions.upstreams.http.v3.HttpProtocolOptions
                explicit_http_config:
                  http2_protocol_options: {}
          - circuit_breakers:
              thresholds:
                - max_connections: 100000
                  max_pending_requests: 100000
                  max_requests: 100000
                - max_connections: 100000
                  max_pending_requests: 100000
                  max_requests: 100000
                  priority: HIGH
            connect_timeout: 1s
            load_assignment:
              cluster_name: xds-grpc
              endpoints:
                - lb_endpoints:
                    - endpoint:
                        address:
                          pipe:
                            path: ./etc/istio/proxy/XDS
            max_requests_per_connection: 1
            name: xds-grpc
            type: STATIC
            typed_extension_protocol_options:
              envoy.extensions.upstreams.http.v3.HttpProtocolOptions:
                '@type': type.googleapis.com/envoy.extensions.upstreams.http.v3.HttpProtocolOptions
                explicit_http_config:
                  http2_protocol_options: {}
            upstream_connection_options:
              tcp_keepalive:
                keepalive_time: 300
          - connect_timeout: 1s
            dns_lookup_family: V4_ONLY
            dns_refresh_rate: 30s
            load_assignment:
              cluster_name: zipkin
              endpoints:
                - lb_endpoints:
                    - endpoint:
                        address:
                          socket_address:
                            address: zipkin.istio-system
                            port_value: 9411
            name: zipkin
            respect_dns_ttl: true
            type: STRICT_DNS
        listeners:
          - address:
              socket_address:
                address: 0.0.0.0
                port_value: 15090
            filter_chains:
              - filters:
                  - name: envoy.filters.network.http_connection_manager
                    typed_config:
                      '@type': type.googleapis.com/envoy.extensions.filters.network.http_connection_manager.v3.HttpConnectionManager
                      http_filters:
                        - name: envoy.filters.http.router
                          typed_config:
                            '@type': type.googleapis.com/envoy.extensions.filters.http.router.v3.Router
                      route_config:
                        virtual_hosts:
                          - domains:
                              - '*'
                            name: backend
                            routes:
                              - match:
                                  prefix: /stats/prometheus
                                route:
                                  cluster: prometheus_stats
                      stat_prefix: stats
          - address:
              socket_address:
                address: 0.0.0.0
                port_value: 15021
            filter_chains:
              - filters:
                  - name: envoy.filters.network.http_connection_manager
                    typed_config:
                      '@type': type.googleapis.com/envoy.extensions.filters.network.http_connection_manager.v3.HttpConnectionManager
                      http_filters:
                        - name: envoy.filters.http.router
                          typed_config:
                            '@type': type.googleapis.com/envoy.extensions.filters.http.router.v3.Router
                      route_config:
                        virtual_hosts:
                          - domains:
                              - '*'
                            name: backend
                            routes:
                              - match:
                                  prefix: /healthz/ready
                                route:
                                  cluster: agent
                      stat_prefix: agent
      stats_config:
        stats_matcher:
          inclusion_list:
            patterns:
              - prefix: reporter=
              - prefix: cluster_manager
              - prefix: listener_manager
              - prefix: server
              - prefix: cluster.xds-grpc
              - prefix: wasm
              - suffix: rbac.allowed
              - suffix: rbac.denied
              - suffix: shadow_allowed
              - suffix: shadow_denied
              - prefix: component
        stats_tags:
          - regex: ^cluster\.((.+?(\..+?\.svc\.cluster\.local)?)\.)
            tag_name: cluster_name
          - regex: ^tcp\.((.*?)\.)\w+?$
            tag_name: tcp_prefix
          - regex: (response_code=\.=(.+?);\.;)|_rq(_(\.d{3}))$
            tag_name: response_code
          - regex: _rq(_(\dxx))$
            tag_name: response_code_class
          - regex: ^listener(?=\.).*?\.http\.(((?:[_.[:digit:]]*|[_\[\]aAbBcCdDeEfF[:digit:]]*))\.)
            tag_name: http_conn_manager_listener_prefix
          - regex: ^http\.(((?:[_.[:digit:]]*|[_\[\]aAbBcCdDeEfF[:digit:]]*))\.)
            tag_name: http_conn_manager_prefix
          - regex: ^listener\.(((?:[_.[:digit:]]*|[_\[\]aAbBcCdDeEfF[:digit:]]*))\.)
            tag_name: listener_address
          - regex: ^mongo\.(.+?)\.(collection|cmd|cx_|op_|delays_|decoding_)(.*?)$
            tag_name: mongo_prefix
          - regex: (reporter=\.=(.*?);\.;)
            tag_name: reporter
          - regex: (source_namespace=\.=(.*?);\.;)
            tag_name: source_namespace
          - regex: (source_workload=\.=(.*?);\.;)
            tag_name: source_workload
          - regex: (source_workload_namespace=\.=(.*?);\.;)
            tag_name: source_workload_namespace
          - regex: (source_principal=\.=(.*?);\.;)
            tag_name: source_principal
          - regex: (source_app=\.=(.*?);\.;)
            tag_name: source_app
          - regex: (source_version=\.=(.*?);\.;)
            tag_name: source_version
          - regex: (source_cluster=\.=(.*?);\.;)
            tag_name: source_cluster
          - regex: (destination_namespace=\.=(.*?);\.;)
            tag_name: destination_namespace
          - regex: (destination_workload=\.=(.*?);\.;)
            tag_name: destination_workload
          - regex: (destination_workload_namespace=\.=(.*?);\.;)
            tag_name: destination_workload_namespace
          - regex: (destination_principal=\.=(.*?);\.;)
            tag_name: destination_principal
          - regex: (destination_app=\.=(.*?);\.;)
            tag_name: destination_app
          - regex: (destination_version=\.=(.*?);\.;)
            tag_name: destination_version
          - regex: (destination_service=\.=(.*?);\.;)
            tag_name: destination_service
          - regex: (destination_service_name=\.=(.*?);\.;)
            tag_name: destination_service_name
          - regex: (destination_service_namespace=\.=(.*?);\.;)
            tag_name: destination_service_namespace
          - regex: (destination_port=\.=(.*?);\.;)
            tag_name: destination_port
          - regex: (destination_cluster=\.=(.*?);\.;)
            tag_name: destination_cluster
          - regex: (request_protocol=\.=(.*?);\.;)
            tag_name: request_protocol
          - regex: (request_operation=\.=(.*?);\.;)
            tag_name: request_operation
          - regex: (request_host=\.=(.*?);\.;)
            tag_name: request_host
          - regex: (response_flags=\.=(.*?);\.;)
            tag_name: response_flags
          - regex: (grpc_response_status=\.=(.*?);\.;)
            tag_name: grpc_response_status
          - regex: (connection_security_policy=\.=(.*?);\.;)
            tag_name: connection_security_policy
          - regex: (source_canonical_service=\.=(.*?);\.;)
            tag_name: source_canonical_service
          - regex: (destination_canonical_service=\.=(.*?);\.;)
            tag_name: destination_canonical_service
          - regex: (source_canonical_revision=\.=(.*?);\.;)
            tag_name: source_canonical_revision
          - regex: (destination_canonical_revision=\.=(.*?);\.;)
            tag_name: destination_canonical_revision
          - regex: (cache\.(.+?)\.)
            tag_name: cache
          - regex: (component\.(.+?)\.)
            tag_name: component
          - regex: (tag\.(.+?);\.)
            tag_name: tag
          - regex: (wasm_filter\.(.+?)\.)
            tag_name: wasm_filter
          - regex: rbac(\.(allowed|denied))
            tag_name: authz_enforce_result
          - regex: (\.istio_dry_run_(allow|deny)_)
            tag_name: authz_dry_run_action
          - regex: (\.shadow_(allowed|denied))
            tag_name: authz_dry_run_result
        use_all_default_tags: false
      tracing:
        http:
          name: envoy.tracers.zipkin
          typed_config:
            '@type': type.googleapis.com/envoy.config.trace.v3.ZipkinConfig
            collector_cluster: zipkin
            collector_endpoint: /api/v2/spans
            collector_endpoint_version: HTTP_JSON
            shared_span_context: false
            trace_id_128bit: true
    last_updated: "2022-07-28T18:56:37.286Z"
  - '@type': type.googleapis.com/envoy.admin.v3.ClustersConfigDump
    dynamic_active_clusters:
      - cluster:
          '@type': type.googleapis.com/envoy.config.cluster.v3.Cluster
          connect_timeout: 10s
          name: BlackHoleCluster
          type: STATIC
        last_updated: "2022-07-28T18:56:37.347Z"
        version_info: 2022-07-28T18:56:29Z/3
      - cluster:
          '@type': type.googleapis.com/envoy.config.cluster.v3.Cluster
          connect_timeout: 10s
          lb_policy: CLUSTER_PROVIDED
          name: PassthroughCluster
          type: ORIGINAL_DST
          typed_extension_protocol_options:
            envoy.extensions.upstreams.http.v3.HttpProtocolOptions:
              '@type': type.googleapis.com/envoy.extensions.upstreams.http.v3.HttpProtocolOptions
              use_downstream_protocol_config:
                http_protocol_options: {}
                http2_protocol_options:
                  max_concurrent_streams: 1073741824
        last_updated: "2022-07-28T18:56:37.347Z"
        version_info: 2022-07-28T18:56:29Z/3
      - cluster:
          '@type': type.googleapis.com/envoy.config.cluster.v3.Cluster
          connect_timeout: 10s
          lb_policy: CLUSTER_PROVIDED
          name: PassthroughCluster-tcp
          type: ORIGINAL_DST
        last_updated: "2022-07-28T18:56:37.347Z"
        version_info: 2022-07-28T18:56:29Z/3
      - cluster:
          '@type': type.googleapis.com/envoy.config.cluster.v3.Cluster
          cleanup_interval: 60s
          connect_timeout: 2s
          lb_policy: CLUSTER_PROVIDED
          name: outbound_pod_tunnel_clus_spiffe://cluster.local/ns/default/sa/default
          original_dst_lb_config:
            upstream_port_override: 15008
          transport_socket:
            name: envoy.transport_sockets.tls
            typed_config:
              '@type': type.googleapis.com/envoy.extensions.transport_sockets.tls.v3.UpstreamTlsContext
              common_tls_context:
                tls_certificate_sds_secret_configs:
                  - name: spiffe://cluster.local/ns/default/sa/default~shell-dc477d7c-62mkc~a6f58ff6-459e-4b93-97ed-cd7240c8fa80
                    sds_config:
                      api_config_source:
                        api_type: GRPC
                        grpc_services:
                          - envoy_grpc:
                              cluster_name: sds-grpc
                        set_node_on_first_message_only: true
                        transport_api_version: V3
                      resource_api_version: V3
          type: ORIGINAL_DST
          typed_extension_protocol_options:
            envoy.extensions.upstreams.http.v3.HttpProtocolOptions:
              '@type': type.googleapis.com/envoy.extensions.upstreams.http.v3.HttpProtocolOptions
              explicit_http_config:
                http2_protocol_options:
                  allow_connect: true
        last_updated: "2022-07-28T18:58:05.404Z"
        version_info: 2022-07-28T18:58:05Z/5
      - cluster:
          '@type': type.googleapis.com/envoy.config.cluster.v3.Cluster
          cleanup_interval: 60s
          connect_timeout: 2s
          lb_policy: CLUSTER_PROVIDED
          name: outbound_tunnel_clus_spiffe://cluster.local/ns/default/sa/default
          original_dst_lb_config:
            use_http_header: true
          transport_socket:
            name: envoy.transport_sockets.tls
            typed_config:
              '@type': type.googleapis.com/envoy.extensions.transport_sockets.tls.v3.UpstreamTlsContext
              common_tls_context:
                tls_certificate_sds_secret_configs:
                  - name: spiffe://cluster.local/ns/default/sa/default~shell-dc477d7c-62mkc~a6f58ff6-459e-4b93-97ed-cd7240c8fa80
                    sds_config:
                      api_config_source:
                        api_type: GRPC
                        grpc_services:
                          - envoy_grpc:
                              cluster_name: sds-grpc
                        set_node_on_first_message_only: true
                        transport_api_version: V3
                      resource_api_version: V3
          type: ORIGINAL_DST
          typed_extension_protocol_options:
            envoy.extensions.upstreams.http.v3.HttpProtocolOptions:
              '@type': type.googleapis.com/envoy.extensions.upstreams.http.v3.HttpProtocolOptions
              explicit_http_config:
                http2_protocol_options:
                  allow_connect: true
        last_updated: "2022-07-28T18:58:05.403Z"
        version_info: 2022-07-28T18:58:05Z/5
      - cluster:
          '@type': type.googleapis.com/envoy.config.cluster.v3.Cluster
          eds_cluster_config:
            eds_config:
              ads: {}
              initial_fetch_timeout: 0s
              resource_api_version: V3
          name: spiffe://cluster.local/ns/default/sa/default_to__metrics-server.kube-system.svc.cluster.local_outbound_internal
          transport_socket_matches:
            - match:
                tunnel: h2
              name: internal_upstream
              transport_socket:
                name: envoy.transport_sockets.internal_upstream
                typed_config:
                  '@type': type.googleapis.com/envoy.extensions.transport_sockets.internal_upstream.v3.InternalUpstreamTransport
                  passthrough_metadata:
                    - kind:
                        host: {}
                      name: tunnel
                    - kind:
                        host: {}
                      name: istio
                  transport_socket:
                    name: envoy.transport_sockets.raw_buffer
                    typed_config:
                      '@type': type.googleapis.com/envoy.extensions.transport_sockets.raw_buffer.v3.RawBuffer
            - match: {}
              name: tlsMode-disabled
              transport_socket:
                name: envoy.transport_sockets.raw_buffer
                typed_config:
                  '@type': type.googleapis.com/envoy.extensions.transport_sockets.raw_buffer.v3.RawBuffer
          type: EDS
        last_updated: "2022-07-28T18:58:05.401Z"
        version_info: 2022-07-28T18:58:05Z/5
      - cluster:
          '@type': type.googleapis.com/envoy.config.cluster.v3.Cluster
          eds_cluster_config:
            eds_config:
              ads: {}
              initial_fetch_timeout: 0s
              resource_api_version: V3
          name: spiffe://cluster.local/ns/default/sa/default_to_dns-tcp_kube-dns.kube-system.svc.cluster.local_outbound_internal
          transport_socket_matches:
            - match:
                tunnel: h2
              name: internal_upstream
              transport_socket:
                name: envoy.transport_sockets.internal_upstream
                typed_config:
                  '@type': type.googleapis.com/envoy.extensions.transport_sockets.internal_upstream.v3.InternalUpstreamTransport
                  passthrough_metadata:
                    - kind:
                        host: {}
                      name: tunnel
                    - kind:
                        host: {}
                      name: istio
                  transport_socket:
                    name: envoy.transport_sockets.raw_buffer
                    typed_config:
                      '@type': type.googleapis.com/envoy.extensions.transport_sockets.raw_buffer.v3.RawBuffer
            - match: {}
              name: tlsMode-disabled
              transport_socket:
                name: envoy.transport_sockets.raw_buffer
                typed_config:
                  '@type': type.googleapis.com/envoy.extensions.transport_sockets.raw_buffer.v3.RawBuffer
          type: EDS
        last_updated: "2022-07-28T18:58:05.401Z"
        version_info: 2022-07-28T18:58:05Z/5
      - cluster:
          '@type': type.googleapis.com/envoy.config.cluster.v3.Cluster
          eds_cluster_config:
            eds_config:
              ads: {}
              initial_fetch_timeout: 0s
              resource_api_version: V3
          name: spiffe://cluster.local/ns/default/sa/default_to_dns_kube-dns.kube-system.svc.cluster.local_outbound_internal
          transport_socket_matches:
            - match:
                tunnel: h2
              name: internal_upstream
              transport_socket:
                name: envoy.transport_sockets.internal_upstream
                typed_config:
                  '@type': type.googleapis.com/envoy.extensions.transport_sockets.internal_upstream.v3.InternalUpstreamTransport
                  passthrough_metadata:
                    - kind:
                        host: {}
                      name: tunnel
                    - kind:
                        host: {}
                      name: istio
                  transport_socket:
                    name: envoy.transport_sockets.raw_buffer
                    typed_config:
                      '@type': type.googleapis.com/envoy.extensions.transport_sockets.raw_buffer.v3.RawBuffer
            - match: {}
              name: tlsMode-disabled
              transport_socket:
                name: envoy.transport_sockets.raw_buffer
                typed_config:
                  '@type': type.googleapis.com/envoy.extensions.transport_sockets.raw_buffer.v3.RawBuffer
          type: EDS
        last_updated: "2022-07-28T18:58:05.400Z"
        version_info: 2022-07-28T18:58:05Z/5
      - cluster:
          '@type': type.googleapis.com/envoy.config.cluster.v3.Cluster
          eds_cluster_config:
            eds_config:
              ads: {}
              initial_fetch_timeout: 0s
              resource_api_version: V3
          name: spiffe://cluster.local/ns/default/sa/default_to_grpc-xds_istiod.istio-system.svc.cluster.local_outbound_internal
          transport_socket_matches:
            - match:
                tunnel: h2
              name: internal_upstream
              transport_socket:
                name: envoy.transport_sockets.internal_upstream
                typed_config:
                  '@type': type.googleapis.com/envoy.extensions.transport_sockets.internal_upstream.v3.InternalUpstreamTransport
                  passthrough_metadata:
                    - kind:
                        host: {}
                      name: tunnel
                    - kind:
                        host: {}
                      name: istio
                  transport_socket:
                    name: envoy.transport_sockets.raw_buffer
                    typed_config:
                      '@type': type.googleapis.com/envoy.extensions.transport_sockets.raw_buffer.v3.RawBuffer
            - match: {}
              name: tlsMode-disabled
              transport_socket:
                name: envoy.transport_sockets.raw_buffer
                typed_config:
                  '@type': type.googleapis.com/envoy.extensions.transport_sockets.raw_buffer.v3.RawBuffer
          type: EDS
        last_updated: "2022-07-28T18:58:05.401Z"
        version_info: 2022-07-28T18:58:05Z/5
      - cluster:
          '@type': type.googleapis.com/envoy.config.cluster.v3.Cluster
          eds_cluster_config:
            eds_config:
              ads: {}
              initial_fetch_timeout: 0s
              resource_api_version: V3
          name: spiffe://cluster.local/ns/default/sa/default_to_http-monitoring_istiod.istio-system.svc.cluster.local_outbound_internal
          transport_socket_matches:
            - match:
                tunnel: h2
              name: internal_upstream
              transport_socket:
                name: envoy.transport_sockets.internal_upstream
                typed_config:
                  '@type': type.googleapis.com/envoy.extensions.transport_sockets.internal_upstream.v3.InternalUpstreamTransport
                  passthrough_metadata:
                    - kind:
                        host: {}
                      name: tunnel
                    - kind:
                        host: {}
                      name: istio
                  transport_socket:
                    name: envoy.transport_sockets.raw_buffer
                    typed_config:
                      '@type': type.googleapis.com/envoy.extensions.transport_sockets.raw_buffer.v3.RawBuffer
            - match: {}
              name: tlsMode-disabled
              transport_socket:
                name: envoy.transport_sockets.raw_buffer
                typed_config:
                  '@type': type.googleapis.com/envoy.extensions.transport_sockets.raw_buffer.v3.RawBuffer
          type: EDS
        last_updated: "2022-07-28T18:58:05.402Z"
        version_info: 2022-07-28T18:58:05Z/5
      - cluster:
          '@type': type.googleapis.com/envoy.config.cluster.v3.Cluster
          eds_cluster_config:
            eds_config:
              ads: {}
              initial_fetch_timeout: 0s
              resource_api_version: V3
          name: spiffe://cluster.local/ns/default/sa/default_to_http_shell.default.svc.cluster.local_outbound_internal
          transport_socket_matches:
            - match:
                tunnel: h2
              name: internal_upstream
              transport_socket:
                name: envoy.transport_sockets.internal_upstream
                typed_config:
                  '@type': type.googleapis.com/envoy.extensions.transport_sockets.internal_upstream.v3.InternalUpstreamTransport
                  passthrough_metadata:
                    - kind:
                        host: {}
                      name: tunnel
                    - kind:
                        host: {}
                      name: istio
                  transport_socket:
                    name: envoy.transport_sockets.raw_buffer
                    typed_config:
                      '@type': type.googleapis.com/envoy.extensions.transport_sockets.raw_buffer.v3.RawBuffer
            - match: {}
              name: tlsMode-disabled
              transport_socket:
                name: envoy.transport_sockets.raw_buffer
                typed_config:
                  '@type': type.googleapis.com/envoy.extensions.transport_sockets.raw_buffer.v3.RawBuffer
          type: EDS
        last_updated: "2022-07-28T18:58:05.402Z"
        version_info: 2022-07-28T18:58:05Z/5
      - cluster:
          '@type': type.googleapis.com/envoy.config.cluster.v3.Cluster
          eds_cluster_config:
            eds_config:
              ads: {}
              initial_fetch_timeout: 0s
              resource_api_version: V3
          name: spiffe://cluster.local/ns/default/sa/default_to_https-dns_istiod.istio-system.svc.cluster.local_outbound_internal
          transport_socket_matches:
            - match:
                tunnel: h2
              name: internal_upstream
              transport_socket:
                name: envoy.transport_sockets.internal_upstream
                typed_config:
                  '@type': type.googleapis.com/envoy.extensions.transport_sockets.internal_upstream.v3.InternalUpstreamTransport
                  passthrough_metadata:
                    - kind:
                        host: {}
                      name: tunnel
                    - kind:
                        host: {}
                      name: istio
                  transport_socket:
                    name: envoy.transport_sockets.raw_buffer
                    typed_config:
                      '@type': type.googleapis.com/envoy.extensions.transport_sockets.raw_buffer.v3.RawBuffer
            - match: {}
              name: tlsMode-disabled
              transport_socket:
                name: envoy.transport_sockets.raw_buffer
                typed_config:
                  '@type': type.googleapis.com/envoy.extensions.transport_sockets.raw_buffer.v3.RawBuffer
          type: EDS
        last_updated: "2022-07-28T18:58:05.402Z"
        version_info: 2022-07-28T18:58:05Z/5
      - cluster:
          '@type': type.googleapis.com/envoy.config.cluster.v3.Cluster
          eds_cluster_config:
            eds_config:
              ads: {}
              initial_fetch_timeout: 0s
              resource_api_version: V3
          name: spiffe://cluster.local/ns/default/sa/default_to_https-webhook_istiod.istio-system.svc.cluster.local_outbound_internal
          transport_socket_matches:
            - match:
                tunnel: h2
              name: internal_upstream
              transport_socket:
                name: envoy.transport_sockets.internal_upstream
                typed_config:
                  '@type': type.googleapis.com/envoy.extensions.transport_sockets.internal_upstream.v3.InternalUpstreamTransport
                  passthrough_metadata:
                    - kind:
                        host: {}
                      name: tunnel
                    - kind:
                        host: {}
                      name: istio
                  transport_socket:
                    name: envoy.transport_sockets.raw_buffer
                    typed_config:
                      '@type': type.googleapis.com/envoy.extensions.transport_sockets.raw_buffer.v3.RawBuffer
            - match: {}
              name: tlsMode-disabled
              transport_socket:
                name: envoy.transport_sockets.raw_buffer
                typed_config:
                  '@type': type.googleapis.com/envoy.extensions.transport_sockets.raw_buffer.v3.RawBuffer
          type: EDS
        last_updated: "2022-07-28T18:58:05.402Z"
        version_info: 2022-07-28T18:58:05Z/5
      - cluster:
          '@type': type.googleapis.com/envoy.config.cluster.v3.Cluster
          eds_cluster_config:
            eds_config:
              ads: {}
              initial_fetch_timeout: 0s
              resource_api_version: V3
          name: spiffe://cluster.local/ns/default/sa/default_to_https_kubernetes.default.svc.cluster.local_outbound_internal
          transport_socket_matches:
            - match:
                tunnel: h2
              name: internal_upstream
              transport_socket:
                name: envoy.transport_sockets.internal_upstream
                typed_config:
                  '@type': type.googleapis.com/envoy.extensions.transport_sockets.internal_upstream.v3.InternalUpstreamTransport
                  passthrough_metadata:
                    - kind:
                        host: {}
                      name: tunnel
                    - kind:
                        host: {}
                      name: istio
                  transport_socket:
                    name: envoy.transport_sockets.raw_buffer
                    typed_config:
                      '@type': type.googleapis.com/envoy.extensions.transport_sockets.raw_buffer.v3.RawBuffer
            - match: {}
              name: tlsMode-disabled
              transport_socket:
                name: envoy.transport_sockets.raw_buffer
                typed_config:
                  '@type': type.googleapis.com/envoy.extensions.transport_sockets.raw_buffer.v3.RawBuffer
          type: EDS
        last_updated: "2022-07-28T18:58:05.400Z"
        version_info: 2022-07-28T18:58:05Z/5
      - cluster:
          '@type': type.googleapis.com/envoy.config.cluster.v3.Cluster
          lb_policy: CLUSTER_PROVIDED
          name: virtual_inbound
          original_dst_lb_config:
            use_http_header: true
          type: ORIGINAL_DST
        last_updated: "2022-07-28T18:56:37.347Z"
        version_info: 2022-07-28T18:56:29Z/3
      - cluster:
          '@type': type.googleapis.com/envoy.config.cluster.v3.Cluster
          lb_policy: CLUSTER_PROVIDED
          name: virtual_inbound_hbone
          original_dst_lb_config:
            upstream_port_override: 15008
            use_http_header: true
          type: ORIGINAL_DST
        last_updated: "2022-07-28T18:56:37.347Z"
        version_info: 2022-07-28T18:56:29Z/3
    static_clusters:
      - cluster:
          '@type': type.googleapis.com/envoy.config.cluster.v3.Cluster
          connect_timeout: 0.250s
          load_assignment:
            cluster_name: agent
            endpoints:
              - lb_endpoints:
                  - endpoint:
                      address:
                        socket_address:
                          address: 127.0.0.1
                          port_value: 15020
          name: agent
          type: STATIC
        last_updated: "2022-07-28T18:56:37.300Z"
      - cluster:
          '@type': type.googleapis.com/envoy.config.cluster.v3.Cluster
          connect_timeout: 0.250s
          load_assignment:
            cluster_name: prometheus_stats
            endpoints:
              - lb_endpoints:
                  - endpoint:
                      address:
                        socket_address:
                          address: 127.0.0.1
                          port_value: 15000
          name: prometheus_stats
          type: STATIC
        last_updated: "2022-07-28T18:56:37.300Z"
      - cluster:
          '@type': type.googleapis.com/envoy.config.cluster.v3.Cluster
          connect_timeout: 1s
          load_assignment:
            cluster_name: sds-grpc
            endpoints:
              - lb_endpoints:
                  - endpoint:
                      address:
                        pipe:
                          path: ./var/run/secrets/workload-spiffe-uds/socket
          name: sds-grpc
          type: STATIC
          typed_extension_protocol_options:
            envoy.extensions.upstreams.http.v3.HttpProtocolOptions:
              '@type': type.googleapis.com/envoy.extensions.upstreams.http.v3.HttpProtocolOptions
              explicit_http_config:
                http2_protocol_options: {}
        last_updated: "2022-07-28T18:56:37.300Z"
      - cluster:
          '@type': type.googleapis.com/envoy.config.cluster.v3.Cluster
          circuit_breakers:
            thresholds:
              - max_connections: 100000
                max_pending_requests: 100000
                max_requests: 100000
              - max_connections: 100000
                max_pending_requests: 100000
                max_requests: 100000
                priority: HIGH
          connect_timeout: 1s
          load_assignment:
            cluster_name: xds-grpc
            endpoints:
              - lb_endpoints:
                  - endpoint:
                      address:
                        pipe:
                          path: ./etc/istio/proxy/XDS
          max_requests_per_connection: 1
          name: xds-grpc
          type: STATIC
          typed_extension_protocol_options:
            envoy.extensions.upstreams.http.v3.HttpProtocolOptions:
              '@type': type.googleapis.com/envoy.extensions.upstreams.http.v3.HttpProtocolOptions
              explicit_http_config:
                http2_protocol_options: {}
          upstream_connection_options:
            tcp_keepalive:
              keepalive_time: 300
        last_updated: "2022-07-28T18:56:37.319Z"
      - cluster:
          '@type': type.googleapis.com/envoy.config.cluster.v3.Cluster
          connect_timeout: 1s
          dns_lookup_family: V4_ONLY
          dns_refresh_rate: 30s
          load_assignment:
            cluster_name: zipkin
            endpoints:
              - lb_endpoints:
                  - endpoint:
                      address:
                        socket_address:
                          address: zipkin.istio-system
                          port_value: 9411
          name: zipkin
          respect_dns_ttl: true
          type: STRICT_DNS
        last_updated: "2022-07-28T18:56:37.319Z"
    version_info: 2022-07-28T18:58:05Z/5
  - '@type': type.googleapis.com/envoy.admin.v3.ListenersConfigDump
    dynamic_listeners:
      - active_state:
          last_updated: "2022-07-28T18:58:05.409Z"
          listener:
            '@type': type.googleapis.com/envoy.config.listener.v3.Listener
            access_log:
              - name: envoy.access_loggers.file
                typed_config:
                  '@type': type.googleapis.com/envoy.extensions.access_loggers.file.v3.FileAccessLog
                  log_format:
                    text_format_source:
                      inline_string: |
                        [%START_TIME%] "%REQ(:METHOD)% %REQ(X-ENVOY-ORIGINAL-PATH?:PATH)% %PROTOCOL%" %RESPONSE_CODE% %RESPONSE_FLAGS% %RESPONSE_CODE_DETAILS% %CONNECTION_TERMINATION_DETAILS% "%UPSTREAM_TRANSPORT_FAILURE_REASON%" %BYTES_RECEIVED% %BYTES_SENT% %DURATION% %RESP(X-ENVOY-UPSTREAM-SERVICE-TIME)% "%REQ(X-FORWARDED-FOR)%" "%REQ(USER-AGENT)%" "%REQ(X-REQUEST-ID)%" "%REQ(:AUTHORITY)%" "%UPSTREAM_HOST%" %UPSTREAM_CLUSTER% %UPSTREAM_LOCAL_ADDRESS% %DOWNSTREAM_LOCAL_ADDRESS% %DOWNSTREAM_REM [...]
                  path: /dev/stdout
            address:
              socket_address:
                address: 0.0.0.0
                port_value: 15001
            filter_chain_matcher:
              matcher_tree:
                exact_match_map:
                  map:
                    "15001":
                      action:
                        name: BlackHoleCluster
                        typed_config:
                          '@type': type.googleapis.com/google.protobuf.StringValue
                          value: BlackHoleCluster
                input:
                  name: port
                  typed_config:
                    '@type': type.googleapis.com/envoy.extensions.matching.common_inputs.network.v3.DestinationPortInput
              on_no_match:
                matcher:
                  matcher_tree:
                    exact_match_map:
                      map:
                        10.48.2.5:
                          matcher:
                            matcher_tree:
                              exact_match_map:
                                map:
                                  10.48.2.5:
                                    action:
                                      name: spiffe://cluster.local/ns/default/sa/default_to_10.48.2.5
                                      typed_config:
                                        '@type': type.googleapis.com/google.protobuf.StringValue
                                        value: spiffe://cluster.local/ns/default/sa/default_to_10.48.2.5
                                  10.52.0.1:
                                    matcher:
                                      matcher_tree:
                                        exact_match_map:
                                          map:
                                            "443":
                                              action:
                                                name: spiffe://cluster.local/ns/default/sa/default_to_https_kubernetes.default.svc.cluster.local_outbound_internal
                                                typed_config:
                                                  '@type': type.googleapis.com/google.protobuf.StringValue
                                                  value: spiffe://cluster.local/ns/default/sa/default_to_https_kubernetes.default.svc.cluster.local_outbound_internal
                                        input:
                                          name: port
                                          typed_config:
                                            '@type': type.googleapis.com/envoy.extensions.matching.common_inputs.network.v3.DestinationPortInput
                                  10.52.0.10:
                                    matcher:
                                      matcher_tree:
                                        exact_match_map:
                                          map:
                                            "53":
                                              action:
                                                name: spiffe://cluster.local/ns/default/sa/default_to_dns-tcp_kube-dns.kube-system.svc.cluster.local_outbound_internal
                                                typed_config:
                                                  '@type': type.googleapis.com/google.protobuf.StringValue
                                                  value: spiffe://cluster.local/ns/default/sa/default_to_dns-tcp_kube-dns.kube-system.svc.cluster.local_outbound_internal
                                        input:
                                          name: port
                                          typed_config:
                                            '@type': type.googleapis.com/envoy.extensions.matching.common_inputs.network.v3.DestinationPortInput
                                  10.52.0.185:
                                    matcher:
                                      matcher_tree:
                                        exact_match_map:
                                          map:
                                            "443":
                                              action:
                                                name: spiffe://cluster.local/ns/default/sa/default_to__metrics-server.kube-system.svc.cluster.local_outbound_internal
                                                typed_config:
                                                  '@type': type.googleapis.com/google.protobuf.StringValue
                                                  value: spiffe://cluster.local/ns/default/sa/default_to__metrics-server.kube-system.svc.cluster.local_outbound_internal
                                        input:
                                          name: port
                                          typed_config:
                                            '@type': type.googleapis.com/envoy.extensions.matching.common_inputs.network.v3.DestinationPortInput
                                  10.52.7.219:
                                    matcher:
                                      matcher_tree:
                                        exact_match_map:
                                          map:
                                            "9087":
                                              action:
                                                name: spiffe://cluster.local/ns/default/sa/default_to_http_shell.default.svc.cluster.local_outbound_internal
                                                typed_config:
                                                  '@type': type.googleapis.com/google.protobuf.StringValue
                                                  value: spiffe://cluster.local/ns/default/sa/default_to_http_shell.default.svc.cluster.local_outbound_internal
                                        input:
                                          name: port
                                          typed_config:
                                            '@type': type.googleapis.com/envoy.extensions.matching.common_inputs.network.v3.DestinationPortInput
                                  10.52.14.243:
                                    matcher:
                                      matcher_tree:
                                        exact_match_map:
                                          map:
                                            "443":
                                              action:
                                                name: spiffe://cluster.local/ns/default/sa/default_to_https-webhook_istiod.istio-system.svc.cluster.local_outbound_internal
                                                typed_config:
                                                  '@type': type.googleapis.com/google.protobuf.StringValue
                                                  value: spiffe://cluster.local/ns/default/sa/default_to_https-webhook_istiod.istio-system.svc.cluster.local_outbound_internal
                                            "15010":
                                              action:
                                                name: spiffe://cluster.local/ns/default/sa/default_to_grpc-xds_istiod.istio-system.svc.cluster.local_outbound_internal
                                                typed_config:
                                                  '@type': type.googleapis.com/google.protobuf.StringValue
                                                  value: spiffe://cluster.local/ns/default/sa/default_to_grpc-xds_istiod.istio-system.svc.cluster.local_outbound_internal
                                            "15012":
                                              action:
                                                name: spiffe://cluster.local/ns/default/sa/default_to_https-dns_istiod.istio-system.svc.cluster.local_outbound_internal
                                                typed_config:
                                                  '@type': type.googleapis.com/google.protobuf.StringValue
                                                  value: spiffe://cluster.local/ns/default/sa/default_to_https-dns_istiod.istio-system.svc.cluster.local_outbound_internal
                                            "15014":
                                              action:
                                                name: spiffe://cluster.local/ns/default/sa/default_to_http-monitoring_istiod.istio-system.svc.cluster.local_outbound_internal
                                                typed_config:
                                                  '@type': type.googleapis.com/google.protobuf.StringValue
                                                  value: spiffe://cluster.local/ns/default/sa/default_to_http-monitoring_istiod.istio-system.svc.cluster.local_outbound_internal
                                        input:
                                          name: port
                                          typed_config:
                                            '@type': type.googleapis.com/envoy.extensions.matching.common_inputs.network.v3.DestinationPortInput
                              input:
                                name: ip
                                typed_config:
                                  '@type': type.googleapis.com/envoy.extensions.matching.common_inputs.network.v3.DestinationIPInput
                    input:
                      name: source-ip
                      typed_config:
                        '@type': type.googleapis.com/envoy.extensions.matching.common_inputs.network.v3.SourceIPInput
                  on_no_match:
                    action:
                      name: PassthroughFilterChain
                      typed_config:
                        '@type': type.googleapis.com/google.protobuf.StringValue
                        value: PassthroughFilterChain
            filter_chains:
              - filters:
                  - name: envoy.filters.network.tcp_proxy
                    typed_config:
                      '@type': type.googleapis.com/envoy.extensions.filters.network.tcp_proxy.v3.TcpProxy
                      access_log:
                        - name: envoy.access_loggers.file
                          typed_config:
                            '@type': type.googleapis.com/envoy.extensions.access_loggers.file.v3.FileAccessLog
                            log_format:
                              text_format_source:
                                inline_string: |
                                  [%START_TIME%] "%REQ(:METHOD)% %REQ(X-ENVOY-ORIGINAL-PATH?:PATH)% %PROTOCOL%" %RESPONSE_CODE% %RESPONSE_FLAGS% %RESPONSE_CODE_DETAILS% %CONNECTION_TERMINATION_DETAILS% "%UPSTREAM_TRANSPORT_FAILURE_REASON%" %BYTES_RECEIVED% %BYTES_SENT% %DURATION% %RESP(X-ENVOY-UPSTREAM-SERVICE-TIME)% "%REQ(X-FORWARDED-FOR)%" "%REQ(USER-AGENT)%" "%REQ(X-REQUEST-ID)%" "%REQ(:AUTHORITY)%" "%UPSTREAM_HOST%" %UPSTREAM_CLUSTER% %UPSTREAM_LOCAL_ADDRESS% %DOWNSTREAM_LOCAL_ADDRESS% %DOWN [...]
                            path: /dev/stdout
                      cluster: spiffe://cluster.local/ns/default/sa/default_to_https_kubernetes.default.svc.cluster.local_outbound_internal
                      stat_prefix: spiffe://cluster.local/ns/default/sa/default_to_https_kubernetes.default.svc.cluster.local_outbound_internal
                name: spiffe://cluster.local/ns/default/sa/default_to_https_kubernetes.default.svc.cluster.local_outbound_internal
              - filters:
                  - name: envoy.filters.network.tcp_proxy
                    typed_config:
                      '@type': type.googleapis.com/envoy.extensions.filters.network.tcp_proxy.v3.TcpProxy
                      access_log:
                        - name: envoy.access_loggers.file
                          typed_config:
                            '@type': type.googleapis.com/envoy.extensions.access_loggers.file.v3.FileAccessLog
                            log_format:
                              text_format_source:
                                inline_string: |
                                  [%START_TIME%] "%REQ(:METHOD)% %REQ(X-ENVOY-ORIGINAL-PATH?:PATH)% %PROTOCOL%" %RESPONSE_CODE% %RESPONSE_FLAGS% %RESPONSE_CODE_DETAILS% %CONNECTION_TERMINATION_DETAILS% "%UPSTREAM_TRANSPORT_FAILURE_REASON%" %BYTES_RECEIVED% %BYTES_SENT% %DURATION% %RESP(X-ENVOY-UPSTREAM-SERVICE-TIME)% "%REQ(X-FORWARDED-FOR)%" "%REQ(USER-AGENT)%" "%REQ(X-REQUEST-ID)%" "%REQ(:AUTHORITY)%" "%UPSTREAM_HOST%" %UPSTREAM_CLUSTER% %UPSTREAM_LOCAL_ADDRESS% %DOWNSTREAM_LOCAL_ADDRESS% %DOWN [...]
                            path: /dev/stdout
                      cluster: spiffe://cluster.local/ns/default/sa/default_to_dns_kube-dns.kube-system.svc.cluster.local_outbound_internal
                      stat_prefix: spiffe://cluster.local/ns/default/sa/default_to_dns_kube-dns.kube-system.svc.cluster.local_outbound_internal
                name: spiffe://cluster.local/ns/default/sa/default_to_dns_kube-dns.kube-system.svc.cluster.local_outbound_internal
              - filters:
                  - name: envoy.filters.network.tcp_proxy
                    typed_config:
                      '@type': type.googleapis.com/envoy.extensions.filters.network.tcp_proxy.v3.TcpProxy
                      access_log:
                        - name: envoy.access_loggers.file
                          typed_config:
                            '@type': type.googleapis.com/envoy.extensions.access_loggers.file.v3.FileAccessLog
                            log_format:
                              text_format_source:
                                inline_string: |
                                  [%START_TIME%] "%REQ(:METHOD)% %REQ(X-ENVOY-ORIGINAL-PATH?:PATH)% %PROTOCOL%" %RESPONSE_CODE% %RESPONSE_FLAGS% %RESPONSE_CODE_DETAILS% %CONNECTION_TERMINATION_DETAILS% "%UPSTREAM_TRANSPORT_FAILURE_REASON%" %BYTES_RECEIVED% %BYTES_SENT% %DURATION% %RESP(X-ENVOY-UPSTREAM-SERVICE-TIME)% "%REQ(X-FORWARDED-FOR)%" "%REQ(USER-AGENT)%" "%REQ(X-REQUEST-ID)%" "%REQ(:AUTHORITY)%" "%UPSTREAM_HOST%" %UPSTREAM_CLUSTER% %UPSTREAM_LOCAL_ADDRESS% %DOWNSTREAM_LOCAL_ADDRESS% %DOWN [...]
                            path: /dev/stdout
                      cluster: spiffe://cluster.local/ns/default/sa/default_to_dns-tcp_kube-dns.kube-system.svc.cluster.local_outbound_internal
                      stat_prefix: spiffe://cluster.local/ns/default/sa/default_to_dns-tcp_kube-dns.kube-system.svc.cluster.local_outbound_internal
                name: spiffe://cluster.local/ns/default/sa/default_to_dns-tcp_kube-dns.kube-system.svc.cluster.local_outbound_internal
              - filters:
                  - name: envoy.filters.network.tcp_proxy
                    typed_config:
                      '@type': type.googleapis.com/envoy.extensions.filters.network.tcp_proxy.v3.TcpProxy
                      access_log:
                        - name: envoy.access_loggers.file
                          typed_config:
                            '@type': type.googleapis.com/envoy.extensions.access_loggers.file.v3.FileAccessLog
                            log_format:
                              text_format_source:
                                inline_string: |
                                  [%START_TIME%] "%REQ(:METHOD)% %REQ(X-ENVOY-ORIGINAL-PATH?:PATH)% %PROTOCOL%" %RESPONSE_CODE% %RESPONSE_FLAGS% %RESPONSE_CODE_DETAILS% %CONNECTION_TERMINATION_DETAILS% "%UPSTREAM_TRANSPORT_FAILURE_REASON%" %BYTES_RECEIVED% %BYTES_SENT% %DURATION% %RESP(X-ENVOY-UPSTREAM-SERVICE-TIME)% "%REQ(X-FORWARDED-FOR)%" "%REQ(USER-AGENT)%" "%REQ(X-REQUEST-ID)%" "%REQ(:AUTHORITY)%" "%UPSTREAM_HOST%" %UPSTREAM_CLUSTER% %UPSTREAM_LOCAL_ADDRESS% %DOWNSTREAM_LOCAL_ADDRESS% %DOWN [...]
                            path: /dev/stdout
                      cluster: spiffe://cluster.local/ns/default/sa/default_to__metrics-server.kube-system.svc.cluster.local_outbound_internal
                      stat_prefix: spiffe://cluster.local/ns/default/sa/default_to__metrics-server.kube-system.svc.cluster.local_outbound_internal
                name: spiffe://cluster.local/ns/default/sa/default_to__metrics-server.kube-system.svc.cluster.local_outbound_internal
              - filters:
                  - name: envoy.filters.network.tcp_proxy
                    typed_config:
                      '@type': type.googleapis.com/envoy.extensions.filters.network.tcp_proxy.v3.TcpProxy
                      access_log:
                        - name: envoy.access_loggers.file
                          typed_config:
                            '@type': type.googleapis.com/envoy.extensions.access_loggers.file.v3.FileAccessLog
                            log_format:
                              text_format_source:
                                inline_string: |
                                  [%START_TIME%] "%REQ(:METHOD)% %REQ(X-ENVOY-ORIGINAL-PATH?:PATH)% %PROTOCOL%" %RESPONSE_CODE% %RESPONSE_FLAGS% %RESPONSE_CODE_DETAILS% %CONNECTION_TERMINATION_DETAILS% "%UPSTREAM_TRANSPORT_FAILURE_REASON%" %BYTES_RECEIVED% %BYTES_SENT% %DURATION% %RESP(X-ENVOY-UPSTREAM-SERVICE-TIME)% "%REQ(X-FORWARDED-FOR)%" "%REQ(USER-AGENT)%" "%REQ(X-REQUEST-ID)%" "%REQ(:AUTHORITY)%" "%UPSTREAM_HOST%" %UPSTREAM_CLUSTER% %UPSTREAM_LOCAL_ADDRESS% %DOWNSTREAM_LOCAL_ADDRESS% %DOWN [...]
                            path: /dev/stdout
                      cluster: spiffe://cluster.local/ns/default/sa/default_to_grpc-xds_istiod.istio-system.svc.cluster.local_outbound_internal
                      stat_prefix: spiffe://cluster.local/ns/default/sa/default_to_grpc-xds_istiod.istio-system.svc.cluster.local_outbound_internal
                name: spiffe://cluster.local/ns/default/sa/default_to_grpc-xds_istiod.istio-system.svc.cluster.local_outbound_internal
              - filters:
                  - name: envoy.filters.network.tcp_proxy
                    typed_config:
                      '@type': type.googleapis.com/envoy.extensions.filters.network.tcp_proxy.v3.TcpProxy
                      access_log:
                        - name: envoy.access_loggers.file
                          typed_config:
                            '@type': type.googleapis.com/envoy.extensions.access_loggers.file.v3.FileAccessLog
                            log_format:
                              text_format_source:
                                inline_string: |
                                  [%START_TIME%] "%REQ(:METHOD)% %REQ(X-ENVOY-ORIGINAL-PATH?:PATH)% %PROTOCOL%" %RESPONSE_CODE% %RESPONSE_FLAGS% %RESPONSE_CODE_DETAILS% %CONNECTION_TERMINATION_DETAILS% "%UPSTREAM_TRANSPORT_FAILURE_REASON%" %BYTES_RECEIVED% %BYTES_SENT% %DURATION% %RESP(X-ENVOY-UPSTREAM-SERVICE-TIME)% "%REQ(X-FORWARDED-FOR)%" "%REQ(USER-AGENT)%" "%REQ(X-REQUEST-ID)%" "%REQ(:AUTHORITY)%" "%UPSTREAM_HOST%" %UPSTREAM_CLUSTER% %UPSTREAM_LOCAL_ADDRESS% %DOWNSTREAM_LOCAL_ADDRESS% %DOWN [...]
                            path: /dev/stdout
                      cluster: spiffe://cluster.local/ns/default/sa/default_to_https-dns_istiod.istio-system.svc.cluster.local_outbound_internal
                      stat_prefix: spiffe://cluster.local/ns/default/sa/default_to_https-dns_istiod.istio-system.svc.cluster.local_outbound_internal
                name: spiffe://cluster.local/ns/default/sa/default_to_https-dns_istiod.istio-system.svc.cluster.local_outbound_internal
              - filters:
                  - name: envoy.filters.network.tcp_proxy
                    typed_config:
                      '@type': type.googleapis.com/envoy.extensions.filters.network.tcp_proxy.v3.TcpProxy
                      access_log:
                        - name: envoy.access_loggers.file
                          typed_config:
                            '@type': type.googleapis.com/envoy.extensions.access_loggers.file.v3.FileAccessLog
                            log_format:
                              text_format_source:
                                inline_string: |
                                  [%START_TIME%] "%REQ(:METHOD)% %REQ(X-ENVOY-ORIGINAL-PATH?:PATH)% %PROTOCOL%" %RESPONSE_CODE% %RESPONSE_FLAGS% %RESPONSE_CODE_DETAILS% %CONNECTION_TERMINATION_DETAILS% "%UPSTREAM_TRANSPORT_FAILURE_REASON%" %BYTES_RECEIVED% %BYTES_SENT% %DURATION% %RESP(X-ENVOY-UPSTREAM-SERVICE-TIME)% "%REQ(X-FORWARDED-FOR)%" "%REQ(USER-AGENT)%" "%REQ(X-REQUEST-ID)%" "%REQ(:AUTHORITY)%" "%UPSTREAM_HOST%" %UPSTREAM_CLUSTER% %UPSTREAM_LOCAL_ADDRESS% %DOWNSTREAM_LOCAL_ADDRESS% %DOWN [...]
                            path: /dev/stdout
                      cluster: spiffe://cluster.local/ns/default/sa/default_to_https-webhook_istiod.istio-system.svc.cluster.local_outbound_internal
                      stat_prefix: spiffe://cluster.local/ns/default/sa/default_to_https-webhook_istiod.istio-system.svc.cluster.local_outbound_internal
                name: spiffe://cluster.local/ns/default/sa/default_to_https-webhook_istiod.istio-system.svc.cluster.local_outbound_internal
              - filters:
                  - name: envoy.filters.network.tcp_proxy
                    typed_config:
                      '@type': type.googleapis.com/envoy.extensions.filters.network.tcp_proxy.v3.TcpProxy
                      access_log:
                        - name: envoy.access_loggers.file
                          typed_config:
                            '@type': type.googleapis.com/envoy.extensions.access_loggers.file.v3.FileAccessLog
                            log_format:
                              text_format_source:
                                inline_string: |
                                  [%START_TIME%] "%REQ(:METHOD)% %REQ(X-ENVOY-ORIGINAL-PATH?:PATH)% %PROTOCOL%" %RESPONSE_CODE% %RESPONSE_FLAGS% %RESPONSE_CODE_DETAILS% %CONNECTION_TERMINATION_DETAILS% "%UPSTREAM_TRANSPORT_FAILURE_REASON%" %BYTES_RECEIVED% %BYTES_SENT% %DURATION% %RESP(X-ENVOY-UPSTREAM-SERVICE-TIME)% "%REQ(X-FORWARDED-FOR)%" "%REQ(USER-AGENT)%" "%REQ(X-REQUEST-ID)%" "%REQ(:AUTHORITY)%" "%UPSTREAM_HOST%" %UPSTREAM_CLUSTER% %UPSTREAM_LOCAL_ADDRESS% %DOWNSTREAM_LOCAL_ADDRESS% %DOWN [...]
                            path: /dev/stdout
                      cluster: spiffe://cluster.local/ns/default/sa/default_to_http-monitoring_istiod.istio-system.svc.cluster.local_outbound_internal
                      stat_prefix: spiffe://cluster.local/ns/default/sa/default_to_http-monitoring_istiod.istio-system.svc.cluster.local_outbound_internal
                name: spiffe://cluster.local/ns/default/sa/default_to_http-monitoring_istiod.istio-system.svc.cluster.local_outbound_internal
              - filters:
                  - name: envoy.filters.network.tcp_proxy
                    typed_config:
                      '@type': type.googleapis.com/envoy.extensions.filters.network.tcp_proxy.v3.TcpProxy
                      access_log:
                        - name: envoy.access_loggers.file
                          typed_config:
                            '@type': type.googleapis.com/envoy.extensions.access_loggers.file.v3.FileAccessLog
                            log_format:
                              text_format_source:
                                inline_string: |
                                  [%START_TIME%] "%REQ(:METHOD)% %REQ(X-ENVOY-ORIGINAL-PATH?:PATH)% %PROTOCOL%" %RESPONSE_CODE% %RESPONSE_FLAGS% %RESPONSE_CODE_DETAILS% %CONNECTION_TERMINATION_DETAILS% "%UPSTREAM_TRANSPORT_FAILURE_REASON%" %BYTES_RECEIVED% %BYTES_SENT% %DURATION% %RESP(X-ENVOY-UPSTREAM-SERVICE-TIME)% "%REQ(X-FORWARDED-FOR)%" "%REQ(USER-AGENT)%" "%REQ(X-REQUEST-ID)%" "%REQ(:AUTHORITY)%" "%UPSTREAM_HOST%" %UPSTREAM_CLUSTER% %UPSTREAM_LOCAL_ADDRESS% %DOWNSTREAM_LOCAL_ADDRESS% %DOWN [...]
                            path: /dev/stdout
                      cluster: spiffe://cluster.local/ns/default/sa/default_to_http_shell.default.svc.cluster.local_outbound_internal
                      stat_prefix: spiffe://cluster.local/ns/default/sa/default_to_http_shell.default.svc.cluster.local_outbound_internal
                name: spiffe://cluster.local/ns/default/sa/default_to_http_shell.default.svc.cluster.local_outbound_internal
              - filters:
                  - name: envoy.filters.network.tcp_proxy
                    typed_config:
                      '@type': type.googleapis.com/envoy.extensions.filters.network.tcp_proxy.v3.TcpProxy
                      access_log:
                        - name: envoy.access_loggers.file
                          typed_config:
                            '@type': type.googleapis.com/envoy.extensions.access_loggers.file.v3.FileAccessLog
                            log_format:
                              text_format_source:
                                inline_string: |
                                  [%START_TIME%] "%REQ(:METHOD)% %REQ(X-ENVOY-ORIGINAL-PATH?:PATH)% %PROTOCOL%" %RESPONSE_CODE% %RESPONSE_FLAGS% %RESPONSE_CODE_DETAILS% %CONNECTION_TERMINATION_DETAILS% "%UPSTREAM_TRANSPORT_FAILURE_REASON%" %BYTES_RECEIVED% %BYTES_SENT% %DURATION% %RESP(X-ENVOY-UPSTREAM-SERVICE-TIME)% "%REQ(X-FORWARDED-FOR)%" "%REQ(USER-AGENT)%" "%REQ(X-REQUEST-ID)%" "%REQ(:AUTHORITY)%" "%UPSTREAM_HOST%" %UPSTREAM_CLUSTER% %UPSTREAM_LOCAL_ADDRESS% %DOWNSTREAM_LOCAL_ADDRESS% %DOWN [...]
                            path: /dev/stdout
                      cluster: PassthroughCluster-tcp
                      stat_prefix: spiffe://cluster.local/ns/default/sa/default_to_10.48.2.5
                name: spiffe://cluster.local/ns/default/sa/default_to_10.48.2.5
              - filters:
                  - name: envoy.filters.network.tcp_proxy
                    typed_config:
                      '@type': type.googleapis.com/envoy.extensions.filters.network.tcp_proxy.v3.TcpProxy
                      access_log:
                        - name: envoy.access_loggers.file
                          typed_config:
                            '@type': type.googleapis.com/envoy.extensions.access_loggers.file.v3.FileAccessLog
                            log_format:
                              text_format_source:
                                inline_string: |
                                  [%START_TIME%] "%REQ(:METHOD)% %REQ(X-ENVOY-ORIGINAL-PATH?:PATH)% %PROTOCOL%" %RESPONSE_CODE% %RESPONSE_FLAGS% %RESPONSE_CODE_DETAILS% %CONNECTION_TERMINATION_DETAILS% "%UPSTREAM_TRANSPORT_FAILURE_REASON%" %BYTES_RECEIVED% %BYTES_SENT% %DURATION% %RESP(X-ENVOY-UPSTREAM-SERVICE-TIME)% "%REQ(X-FORWARDED-FOR)%" "%REQ(USER-AGENT)%" "%REQ(X-REQUEST-ID)%" "%REQ(:AUTHORITY)%" "%UPSTREAM_HOST%" %UPSTREAM_CLUSTER% %UPSTREAM_LOCAL_ADDRESS% %DOWNSTREAM_LOCAL_ADDRESS% %DOWN [...]
                            path: /dev/stdout
                      cluster: PassthroughCluster
                      stat_prefix: PassthroughCluster
                name: PassthroughFilterChain
              - filters:
                  - name: envoy.filters.network.tcp_proxy
                    typed_config:
                      '@type': type.googleapis.com/envoy.extensions.filters.network.tcp_proxy.v3.TcpProxy
                      access_log:
                        - name: envoy.access_loggers.file
                          typed_config:
                            '@type': type.googleapis.com/envoy.extensions.access_loggers.file.v3.FileAccessLog
                            log_format:
                              text_format_source:
                                inline_string: |
                                  [%START_TIME%] "%REQ(:METHOD)% %REQ(X-ENVOY-ORIGINAL-PATH?:PATH)% %PROTOCOL%" %RESPONSE_CODE% %RESPONSE_FLAGS% %RESPONSE_CODE_DETAILS% %CONNECTION_TERMINATION_DETAILS% "%UPSTREAM_TRANSPORT_FAILURE_REASON%" %BYTES_RECEIVED% %BYTES_SENT% %DURATION% %RESP(X-ENVOY-UPSTREAM-SERVICE-TIME)% "%REQ(X-FORWARDED-FOR)%" "%REQ(USER-AGENT)%" "%REQ(X-REQUEST-ID)%" "%REQ(:AUTHORITY)%" "%UPSTREAM_HOST%" %UPSTREAM_CLUSTER% %UPSTREAM_LOCAL_ADDRESS% %DOWNSTREAM_LOCAL_ADDRESS% %DOWN [...]
                            path: /dev/stdout
                      cluster: blackhole outbound
                      stat_prefix: BlackHoleCluster
                name: blackhole outbound
            listener_filters:
              - name: envoy.filters.listener.original_dst
                typed_config:
                  '@type': type.googleapis.com/envoy.extensions.filters.listener.original_dst.v3.OriginalDst
              - config_discovery:
                  config_source:
                    ads: {}
                    initial_fetch_timeout: 30s
                  type_urls:
                    - type.googleapis.com/istio.telemetry.workloadmetadata.v1.WorkloadMetadataResources
                name: envoy.filters.listener.workload_metadata
            name: uproxy_outbound
            socket_options:
              - description: Set socket mark to packets coming back from outbound listener
                int_value: "1025"
                level: "1"
                name: "36"
            transparent: true
            use_original_dst: true
          version_info: 2022-07-28T18:56:29Z/3
        name: uproxy_outbound
      - active_state:
          last_updated: "2022-07-28T18:58:05.411Z"
          listener:
            '@type': type.googleapis.com/envoy.config.listener.v3.Listener
            access_log:
              - name: envoy.access_loggers.file
                typed_config:
                  '@type': type.googleapis.com/envoy.extensions.access_loggers.file.v3.FileAccessLog
                  log_format:
                    text_format_source:
                      inline_string: |
                        [%START_TIME%] "%REQ(:METHOD)% %REQ(X-ENVOY-ORIGINAL-PATH?:PATH)% %PROTOCOL%" %RESPONSE_CODE% %RESPONSE_FLAGS% %RESPONSE_CODE_DETAILS% %CONNECTION_TERMINATION_DETAILS% "%UPSTREAM_TRANSPORT_FAILURE_REASON%" %BYTES_RECEIVED% %BYTES_SENT% %DURATION% %RESP(X-ENVOY-UPSTREAM-SERVICE-TIME)% "%REQ(X-FORWARDED-FOR)%" "%REQ(USER-AGENT)%" "%REQ(X-REQUEST-ID)%" "%REQ(:AUTHORITY)%" "%UPSTREAM_HOST%" %UPSTREAM_CLUSTER% %UPSTREAM_LOCAL_ADDRESS% %DOWNSTREAM_LOCAL_ADDRESS% %DOWNSTREAM_REM [...]
                  path: /dev/stdout
            address:
              socket_address:
                address: 0.0.0.0
                port_value: 15008
            filter_chains:
              - filter_chain_match:
                  prefix_ranges:
                    - address_prefix: 10.48.2.5
                      prefix_len: 32
                filters:
                  - name: envoy.filters.network.http_connection_manager
                    typed_config:
                      '@type': type.googleapis.com/envoy.extensions.filters.network.http_connection_manager.v3.HttpConnectionManager
                      access_log:
                        - name: envoy.access_loggers.file
                          typed_config:
                            '@type': type.googleapis.com/envoy.extensions.access_loggers.file.v3.FileAccessLog
                            log_format:
                              text_format_source:
                                inline_string: |
                                  [%START_TIME%] "%REQ(:METHOD)% %REQ(X-ENVOY-ORIGINAL-PATH?:PATH)% %PROTOCOL%" %RESPONSE_CODE% %RESPONSE_FLAGS% %RESPONSE_CODE_DETAILS% %CONNECTION_TERMINATION_DETAILS% "%UPSTREAM_TRANSPORT_FAILURE_REASON%" %BYTES_RECEIVED% %BYTES_SENT% %DURATION% %RESP(X-ENVOY-UPSTREAM-SERVICE-TIME)% "%REQ(X-FORWARDED-FOR)%" "%REQ(USER-AGENT)%" "%REQ(X-REQUEST-ID)%" "%REQ(:AUTHORITY)%" "%UPSTREAM_HOST%" %UPSTREAM_CLUSTER% %UPSTREAM_LOCAL_ADDRESS% %DOWNSTREAM_LOCAL_ADDRESS% %DOWN [...]
                            path: /dev/stdout
                      http_filters:
                        - name: envoy.filters.http.router
                          typed_config:
                            '@type': type.googleapis.com/envoy.extensions.filters.http.router.v3.Router
                      http2_protocol_options:
                        allow_connect: true
                      route_config:
                        name: local_route
                        virtual_hosts:
                          - domains:
                              - '*'
                            name: local_service
                            routes:
                              - match:
                                  connect_matcher: {}
                                route:
                                  cluster: virtual_inbound
                                  upgrade_configs:
                                    - connect_config: {}
                                      upgrade_type: CONNECT
                      stat_prefix: inbound_hcm
                      upgrade_configs:
                        - upgrade_type: CONNECT
                name: inbound_10.48.2.5
                transport_socket:
                  name: envoy.transport_sockets.tls
                  typed_config:
                    '@type': type.googleapis.com/envoy.extensions.transport_sockets.tls.v3.DownstreamTlsContext
                    common_tls_context:
                      combined_validation_context:
                        default_validation_context:
                          match_subject_alt_names:
                            - prefix: spiffe://cluster.local/
                        validation_context_sds_secret_config:
                          name: ROOTCA
                          sds_config:
                            api_config_source:
                              api_type: GRPC
                              grpc_services:
                                - envoy_grpc:
                                    cluster_name: sds-grpc
                              set_node_on_first_message_only: true
                              transport_api_version: V3
                            initial_fetch_timeout: 0s
                            resource_api_version: V3
                      tls_certificate_sds_secret_configs:
                        - name: spiffe://cluster.local/ns/default/sa/default~shell-dc477d7c-62mkc~a6f58ff6-459e-4b93-97ed-cd7240c8fa80
                          sds_config:
                            api_config_source:
                              api_type: GRPC
                              grpc_services:
                                - envoy_grpc:
                                    cluster_name: sds-grpc
                              set_node_on_first_message_only: true
                              transport_api_version: V3
                            resource_api_version: V3
              - filters:
                  - name: envoy.filters.network.tcp_proxy
                    typed_config:
                      '@type': type.googleapis.com/envoy.extensions.filters.network.tcp_proxy.v3.TcpProxy
                      access_log:
                        - name: envoy.access_loggers.file
                          typed_config:
                            '@type': type.googleapis.com/envoy.extensions.access_loggers.file.v3.FileAccessLog
                            log_format:
                              text_format_source:
                                inline_string: |
                                  [%START_TIME%] "%REQ(:METHOD)% %REQ(X-ENVOY-ORIGINAL-PATH?:PATH)% %PROTOCOL%" %RESPONSE_CODE% %RESPONSE_FLAGS% %RESPONSE_CODE_DETAILS% %CONNECTION_TERMINATION_DETAILS% "%UPSTREAM_TRANSPORT_FAILURE_REASON%" %BYTES_RECEIVED% %BYTES_SENT% %DURATION% %RESP(X-ENVOY-UPSTREAM-SERVICE-TIME)% "%REQ(X-FORWARDED-FOR)%" "%REQ(USER-AGENT)%" "%REQ(X-REQUEST-ID)%" "%REQ(:AUTHORITY)%" "%UPSTREAM_HOST%" %UPSTREAM_CLUSTER% %UPSTREAM_LOCAL_ADDRESS% %DOWNSTREAM_LOCAL_ADDRESS% %DOWN [...]
                            path: /dev/stdout
                      cluster: blackhole inbound
                      stat_prefix: BlackHoleCluster
                name: blackhole inbound
            listener_filters:
              - name: envoy.filters.listener.original_dst
                typed_config:
                  '@type': type.googleapis.com/envoy.extensions.filters.listener.original_dst.v3.OriginalDst
            name: uproxy_inbound
            socket_options:
              - description: Set socket mark to packets coming back from inbound listener
                int_value: "1026"
                level: "1"
                name: "36"
            use_original_dst: true
          version_info: 2022-07-28T18:56:29Z/3
        name: uproxy_inbound
      - active_state:
          last_updated: "2022-07-28T18:58:05.412Z"
          listener:
            '@type': type.googleapis.com/envoy.config.listener.v3.Listener
            access_log:
              - name: envoy.access_loggers.file
                typed_config:
                  '@type': type.googleapis.com/envoy.extensions.access_loggers.file.v3.FileAccessLog
                  log_format:
                    text_format_source:
                      inline_string: |
                        [%START_TIME%] "%REQ(:METHOD)% %REQ(X-ENVOY-ORIGINAL-PATH?:PATH)% %PROTOCOL%" %RESPONSE_CODE% %RESPONSE_FLAGS% %RESPONSE_CODE_DETAILS% %CONNECTION_TERMINATION_DETAILS% "%UPSTREAM_TRANSPORT_FAILURE_REASON%" %BYTES_RECEIVED% %BYTES_SENT% %DURATION% %RESP(X-ENVOY-UPSTREAM-SERVICE-TIME)% "%REQ(X-FORWARDED-FOR)%" "%REQ(USER-AGENT)%" "%REQ(X-REQUEST-ID)%" "%REQ(:AUTHORITY)%" "%UPSTREAM_HOST%" %UPSTREAM_CLUSTER% %UPSTREAM_LOCAL_ADDRESS% %DOWNSTREAM_LOCAL_ADDRESS% %DOWNSTREAM_REM [...]
                  path: /dev/stdout
            address:
              socket_address:
                address: 0.0.0.0
                port_value: 15006
            filter_chains:
              - filter_chain_match:
                  prefix_ranges:
                    - address_prefix: 10.48.2.5
                      prefix_len: 32
                filters:
                  - name: envoy.filters.network.tcp_proxy
                    typed_config:
                      '@type': type.googleapis.com/envoy.extensions.filters.network.tcp_proxy.v3.TcpProxy
                      cluster: virtual_inbound
                      stat_prefix: BlackHoleCluster
                name: inbound_10.48.2.5
              - filters:
                  - name: envoy.filters.network.tcp_proxy
                    typed_config:
                      '@type': type.googleapis.com/envoy.extensions.filters.network.tcp_proxy.v3.TcpProxy
                      access_log:
                        - name: envoy.access_loggers.file
                          typed_config:
                            '@type': type.googleapis.com/envoy.extensions.access_loggers.file.v3.FileAccessLog
                            log_format:
                              text_format_source:
                                inline_string: |
                                  [%START_TIME%] "%REQ(:METHOD)% %REQ(X-ENVOY-ORIGINAL-PATH?:PATH)% %PROTOCOL%" %RESPONSE_CODE% %RESPONSE_FLAGS% %RESPONSE_CODE_DETAILS% %CONNECTION_TERMINATION_DETAILS% "%UPSTREAM_TRANSPORT_FAILURE_REASON%" %BYTES_RECEIVED% %BYTES_SENT% %DURATION% %RESP(X-ENVOY-UPSTREAM-SERVICE-TIME)% "%REQ(X-FORWARDED-FOR)%" "%REQ(USER-AGENT)%" "%REQ(X-REQUEST-ID)%" "%REQ(:AUTHORITY)%" "%UPSTREAM_HOST%" %UPSTREAM_CLUSTER% %UPSTREAM_LOCAL_ADDRESS% %DOWNSTREAM_LOCAL_ADDRESS% %DOWN [...]
                            path: /dev/stdout
                      cluster: blackhole inbound plaintext
                      stat_prefix: BlackHoleCluster
                name: blackhole inbound plaintext
            listener_filters:
              - name: envoy.filters.listener.original_dst
                typed_config:
                  '@type': type.googleapis.com/envoy.extensions.filters.listener.original_dst.v3.OriginalDst
            name: uproxy_inbound_plaintext
            socket_options:
              - description: Set socket mark to packets coming back from inbound listener
                int_value: "1026"
                level: "1"
                name: "36"
            use_original_dst: true
          version_info: 2022-07-28T18:56:29Z/3
        name: uproxy_inbound_plaintext
      - active_state:
          last_updated: "2022-07-28T18:58:05.412Z"
          listener:
            '@type': type.googleapis.com/envoy.config.listener.v3.Listener
            address:
              envoy_internal_address:
                server_listener_name: outbound_tunnel_lis_spiffe://cluster.local/ns/default/sa/default
            filter_chains:
              - filters:
                  - name: envoy.filters.network.tcp_proxy
                    typed_config:
                      '@type': type.googleapis.com/envoy.extensions.filters.network.tcp_proxy.v3.TcpProxy
                      access_log:
                        - name: envoy.access_loggers.file
                          typed_config:
                            '@type': type.googleapis.com/envoy.extensions.access_loggers.file.v3.FileAccessLog
                            log_format:
                              text_format_source:
                                inline_string: |
                                  [%START_TIME%] "%REQ(:METHOD)% %REQ(X-ENVOY-ORIGINAL-PATH?:PATH)% %PROTOCOL%" %RESPONSE_CODE% %RESPONSE_FLAGS% %RESPONSE_CODE_DETAILS% %CONNECTION_TERMINATION_DETAILS% "%UPSTREAM_TRANSPORT_FAILURE_REASON%" %BYTES_RECEIVED% %BYTES_SENT% %DURATION% %RESP(X-ENVOY-UPSTREAM-SERVICE-TIME)% "%REQ(X-FORWARDED-FOR)%" "%REQ(USER-AGENT)%" "%REQ(X-REQUEST-ID)%" "%REQ(:AUTHORITY)%" "%UPSTREAM_HOST%" %UPSTREAM_CLUSTER% %UPSTREAM_LOCAL_ADDRESS% %DOWNSTREAM_LOCAL_ADDRESS% %DOWN [...]
                            path: /dev/stdout
                      cluster: outbound_tunnel_clus_spiffe://cluster.local/ns/default/sa/default
                      stat_prefix: outbound_tunnel_lis_spiffe://cluster.local/ns/default/sa/default
                      tunneling_config:
                        headers_to_add:
                          - header:
                              key: x-envoy-original-dst-host
                              value: '%DYNAMIC_METADATA(["tunnel", "detunnel_address"])%'
                        hostname: '%DYNAMIC_METADATA(tunnel:detunnel_address)%'
            internal_listener: {}
            name: outbound_tunnel_lis_spiffe://cluster.local/ns/default/sa/default
            use_original_dst: false
          version_info: 2022-07-28T18:58:05Z/5
        name: outbound_tunnel_lis_spiffe://cluster.local/ns/default/sa/default
    static_listeners:
      - last_updated: "2022-07-28T18:56:37.326Z"
        listener:
          '@type': type.googleapis.com/envoy.config.listener.v3.Listener
          address:
            socket_address:
              address: 0.0.0.0
              port_value: 15090
          filter_chains:
            - filters:
                - name: envoy.filters.network.http_connection_manager
                  typed_config:
                    '@type': type.googleapis.com/envoy.extensions.filters.network.http_connection_manager.v3.HttpConnectionManager
                    http_filters:
                      - name: envoy.filters.http.router
                        typed_config:
                          '@type': type.googleapis.com/envoy.extensions.filters.http.router.v3.Router
                    route_config:
                      virtual_hosts:
                        - domains:
                            - '*'
                          name: backend
                          routes:
                            - match:
                                prefix: /stats/prometheus
                              route:
                                cluster: prometheus_stats
                    stat_prefix: stats
      - last_updated: "2022-07-28T18:56:37.327Z"
        listener:
          '@type': type.googleapis.com/envoy.config.listener.v3.Listener
          address:
            socket_address:
              address: 0.0.0.0
              port_value: 15021
          filter_chains:
            - filters:
                - name: envoy.filters.network.http_connection_manager
                  typed_config:
                    '@type': type.googleapis.com/envoy.extensions.filters.network.http_connection_manager.v3.HttpConnectionManager
                    http_filters:
                      - name: envoy.filters.http.router
                        typed_config:
                          '@type': type.googleapis.com/envoy.extensions.filters.http.router.v3.Router
                    route_config:
                      virtual_hosts:
                        - domains:
                            - '*'
                          name: backend
                          routes:
                            - match:
                                prefix: /healthz/ready
                              route:
                                cluster: agent
                    stat_prefix: agent
    version_info: 2022-07-28T18:58:05Z/5
  - '@type': type.googleapis.com/envoy.admin.v3.ScopedRoutesConfigDump
  - '@type': type.googleapis.com/envoy.admin.v3.RoutesConfigDump
    static_route_configs:
      - last_updated: "2022-07-28T18:56:37.327Z"
        route_config:
          '@type': type.googleapis.com/envoy.config.route.v3.RouteConfiguration
          virtual_hosts:
            - domains:
                - '*'
              name: backend
              routes:
                - match:
                    prefix: /healthz/ready
                  route:
                    cluster: agent
      - last_updated: "2022-07-28T18:58:05.410Z"
        route_config:
          '@type': type.googleapis.com/envoy.config.route.v3.RouteConfiguration
          name: local_route
          virtual_hosts:
            - domains:
                - '*'
              name: local_service
              routes:
                - match:
                    connect_matcher: {}
                  route:
                    cluster: virtual_inbound
                    upgrade_configs:
                      - connect_config: {}
                        upgrade_type: CONNECT
      - last_updated: "2022-07-28T18:56:37.326Z"
        route_config:
          '@type': type.googleapis.com/envoy.config.route.v3.RouteConfiguration
          virtual_hosts:
            - domains:
                - '*'
              name: backend
              routes:
                - match:
                    prefix: /stats/prometheus
                  route:
                    cluster: prometheus_stats
  - '@type': type.googleapis.com/envoy.admin.v3.SecretsConfigDump
    dynamic_active_secrets:
      - last_updated: "2022-07-28T18:58:05.831Z"
        name: spiffe://cluster.local/ns/default/sa/default~shell-dc477d7c-62mkc~a6f58ff6-459e-4b93-97ed-cd7240c8fa80
        secret:
          '@type': type.googleapis.com/envoy.extensions.transport_sockets.tls.v3.Secret
          name: spiffe://cluster.local/ns/default/sa/default~shell-dc477d7c-62mkc~a6f58ff6-459e-4b93-97ed-cd7240c8fa80
          tls_certificate:
            certificate_chain:
              inline_bytes: LS0tLS1CRUdJTiBDRVJUSUZJQ0FURS0tLS0tCk1JSURRVENDQWltZ0F3SUJBZ0lSQU9YendUay84YlJ2YXNGQnZOazYxMFV3RFFZSktvWklodmNOQVFFTEJRQXcKR0RFV01CUUdBMVVFQ2hNTlkyeDFjM1JsY2k1c2IyTmhiREFlRncweU1qQTNNamd4T0RVMk1EVmFGdzB5TWpBMwpNamt4T0RVNE1EVmFNQUF3Z2dFaU1BMEdDU3FHU0liM0RRRUJBUVVBQTRJQkR3QXdnZ0VLQW9JQkFRQzRJOGZxCmI5MVR5VDBRNEFzYmlCN2d5UVN3T1pkMkdnTFJjdnlqVFBleUJUQXZ6WmorOFJUTVNwVXliUkk2Qml2NmJZSDMKR2NUS0VTK3FLQk1MRHB4NkQ3MUhPdkxCWWU3NmVhbmJDYjV1djVhNE8vZExEK3VBTS9QTTJDOGdTUjF6S3RuSgpR [...]
            private_key:
              inline_bytes: W3JlZGFjdGVkXQ==
      - last_updated: "2022-07-28T18:58:05.507Z"
        name: ROOTCA
        secret:
          '@type': type.googleapis.com/envoy.extensions.transport_sockets.tls.v3.Secret
          name: ROOTCA
          validation_context:
            trusted_ca:
              inline_bytes: LS0tLS1CRUdJTiBDRVJUSUZJQ0FURS0tLS0tCk1JSUMvRENDQWVTZ0F3SUJBZ0lRSi9iREtodTRyZWs4RmNjMzJOTW1LekFOQmdrcWhraUc5dzBCQVFzRkFEQVkKTVJZd0ZBWURWUVFLRXcxamJIVnpkR1Z5TG14dlkyRnNNQjRYRFRJeU1EY3lPREU0TlRZeU9Gb1hEVE15TURjeQpOVEU0TlRZeU9Gb3dHREVXTUJRR0ExVUVDaE1OWTJ4MWMzUmxjaTVzYjJOaGJEQ0NBU0l3RFFZSktvWklodmNOCkFRRUJCUUFEZ2dFUEFEQ0NBUW9DZ2dFQkFNNUZvbFdEU1FDTW9mcml6YTZOUjBIODZwVzhrN005L1NXbjVFdEQKYkkwUzJrenB2TmVWVHIxRmoxaTNjY1ZvcjlyQnIyMjRvSjhvdktvbFJ6UE9xdnNOZzdPdWU1dDM2TkxNMW1BTwpR [...]
